--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -43,7 +43,6 @@
     <string name="share">Падзяліцца</string>
     <string name="add_title">Увядзіце тэкст</string>
     <string name="choose_image">Выберыце карцінку:</string>
-    <string name="attention">Увага!</string>
     <string name="cancel">Адмена</string>
     <string name="what_to_do">Што б вы хацелі зрабіць?</string>
     <string name="help_idea_add">Для дадання новай ідэі націсніце на + </string>
@@ -60,7 +59,7 @@
     <string name="rate_app">Паставіць ацэнку</string>
     <string name="not_enough_balanсe">Недастаткова сродкаў на балансе !</string>
     <string name="attention_alert">Увага!</string>
-    <string name="advice1_1"> Ставіцеся да грошай з павагай\"</string>
+    <string name="advice1_1"> \"Ставіцеся да грошай з павагай\"</string>
     <string name="advice1_2">Вашы грошы гэта ваша "закансерваваны" час і энергія, якія вы патрацілі, каб іх зарабіць.</string>
     <string name="advice2">Завядзіце сабе звычку весці ўлік даходаў і расходаў у электронным альбо пісьмовым выглядзе.</string>
     <string name="advice3_1">Пазбаўцеся ад крэдытных карт, спажывецкіх крэдытаў і іншых даўгоў.</string>
@@ -140,7 +139,7 @@
    </string>
     <string name="main">Галоўнае</string>
     <string name="finance">Фінансы</string>
-    <string name="you_forgot_habbit">\"Вы не забыліся пра звычку\"</string>
+    <string name="you_forgot_habbit">Вы не забыліся пра звычку</string>
     <string name="you_can_edit_profile">Вы можаце рэдагаваць свой профіль</string>
     <string name="advice25_1">Поспех пры бліжэйшым разглядзе аказваецца ўсяго толькі вынікам вялікай працы і дбайнай падрыхтоўкі.</string>
     <string name="advice26_1">Калі вы вырашылі нешта зрабіць, але не пачалі гэта рабіць на працягу 72 гадзін-у 85% выпадкаў Вы не зробіце гэта ніколі.</string>
@@ -242,7 +241,7 @@
     <string name="icon">Абразок</string>
     <string name="minutes_amount">Колькасць хвілін</string>
     <string name="enter_secret_word">Увядзіце сакрэтнае слова</string>
-    <string name="set_notification_on">"Устаноўлена апавяшчэнне на"</string>
+    <string name="set_notification_on">Устаноўлена апавяшчэнне на</string>
     <string name="create">Стварыць</string>
     <string name="add_pattern">Дадаць шаблон</string>
     <string name="name">Імя</string>
@@ -260,7 +259,7 @@
     <string name="flight_over_city">Палёт над сваім горадам</string>
     <string name="my_dream_in_dream">Мне сніўся сон у сне які быў сном</string>
     <string name="congratulation">Віншуем!</string>
-    <string name="level">\"Узровень \"</string>
+    <string name="level">Узровень </string>
     <string name="you_are_hello">Вас вітае</string>
     <string name="tool">Інструмент</string>
     <string name="got_you_aim">Дасягнення вашых мэтаў</string>
@@ -275,13 +274,13 @@
     <string name="fix_idea">Фіксаваць ідэі</string>
     <string name="lets_start">Давайце пачынаць !</string>
     <string name="click_by_screen">Клікніце па экране</string>
-    <string name="before_start">\""Перад пачаткам прапануем пазнаёміцца з дадаткам\"</string>
+    <string name="before_start">Перад пачаткам прапануем пазнаёміцца з дадаткам</string>
     <string name="two_tools">Тут маюцца два інструмента навігацыі</string>
     <string name="bottom_and_side">Ніжняя і бакавыя</string>
     <string name="side_open_by_click">Бакавая адкрываецца па націску на бургер якая знаходзіцца ў верхнім левым куце</string>
     <string name="after_instruction">Пасля пераходу на кожнае з вокнаў пачакайце запуск інструктажу</string>
     <string name="go">Паехалі !</string>
-    <string name="you_calendar">\"Ваш каляндар\"</string>
+    <string name="you_calendar">Ваш каляндар</string>
     <string name="show_day">Адлюстроўвае дні з абнаўленнем на наступныя 3 месяцы</string>
     <string name="set_event_new_task">Заціснутай на дату вы можаце ўсталёўваць падзея ці ж новую задачу ў пэўны дзень тыдня</string>
     <string name="next_you_cards">Далей ідуць вашыя карткі</string>
@@ -290,41 +289,74 @@
     <string name="show_profile">Адкрыўшы бакавую панэль вы можаце ўбачыць ваш профіль</string>
     <string name="avater_name">Аватарка, імя і бягучы ўзровень, для таго каб усталяваць аватарку і імя клікніце на іх</string>
     <string name="lvlup_some_action">Узровень павышаецца за пэўныя дзеянні такія выкананне звычак, задач і таму падобных</string>
-    <string name="inside_cards_record">\"Карткі усярэдзіне якіх можна запісваць нататкі або задачы\"</string>
-    <string name="hold_card">\"Зацісніце на картку з спісу каб выклікаць акно з дзеяннямі\"</string>
-    <string name="insert_button">\"Кнопка Дадаць\"</string>
+    <string name="inside_cards_record">Карткі усярэдзіне якіх можна запісваць нататкі або задачы</string>
+    <string name="hold_card">Зацісніце на картку з спісу каб выклікаць акно з дзеяннямі</string>
+    <string name="insert_button">Кнопка Дадаць</string>
     <string name="create_new_category_click">Націснуўшы на гэтую кнопку вы можаце стварыць новую картку, паказаўшы назву катэгорыі і абразок</string>
-    <string name="under_everyday">\" Пад кожным днём хаваецца спіс які можна запоўніць\"</string>
+    <string name="under_everyday"> Пад кожным днём хаваецца спіс які можна запоўніць</string>
     <string name="cause_see">Каб убачыць што запланавана на той ці іншы дзень клікніце на яго</string>
-    <string name="hold_task_action">\""Можаце задаць на запланаваную задачу з спісу каб выклікаць акно з дзеяннямі\"</string>
+    <string name="hold_task_action">Можаце задаць на запланаваную задачу з спісу каб выклікаць акно з дзеяннямі</string>
     <string name="click_here_button">Націснуўшы на гэтую кнопку вы можаце стварыць справы на пэўны дзень тыдня</string>
     <string name="planning_events">Ваш спіс запланаваных падзей</string>
-    <string name="set_remind_by_wish">\"Па жаданні вы можаце ўсталяваць напамін\"</string>
+    <string name="set_remind_by_wish">Па жаданні вы можаце ўсталяваць напамін</string>
     <string name="create_ev_date">Націснуўшы на гэтую кнопку вы можаце стварыць падзеі на пэўную дату</string>
     <string name="list_habit">Ваш спіс звычак якія вы хочаце да сябе прышчапіць</string>
     <string name="in_left_day">Злева паказана колькі дзён вы ўжо замацоўваеце звычку</string>
-    <string name="in_right_hold">\"Справа колькі дзён трэба трымацца\"</string>
-    <string name="click_by_habit">\""Клікнуўшы на картку Вы можаце адзначыць выкананне звычкі за бягучы дзень а заціснуўшы на картку Вы можаце выклікаць акно з дзеяннямі\"</string>
-    <string name="create_new_habit">\" Націснуўшы на гэтую кнопку вы можаце стварыць новую звычку\"</string>
+    <string name="in_right_hold">Справа колькі дзён трэба трымацца</string>
+    <string name="click_by_habit">Клікнуўшы на картку Вы можаце адзначыць выкананне звычкі за бягучы дзень а заціснуўшы на картку Вы можаце выклікаць акно з дзеяннямі</string>
+    <string name="create_new_habit"> Націснуўшы на гэтую кнопку вы можаце стварыць новую звычку</string>
     <string name="list_process">Ваш спіс працэсаў на якіх патрабуецца канцэнтрацыя</string>
-    <string name="theroy_thousand_hour">\" Гэта акно створана на аснове тэорый 10 000 гадзін\"</string>
-    <string name="profession_thousand_hour">\" У якім гаворыцца каб стаць прафесіяналам у пэўнай вобласці, трэба выдаткаваць на яе вывучэнне каля 10 тысяч гадзін\"</string>
+    <string name="theroy_thousand_hour"> Гэта акно створана на аснове тэорый 10 000 гадзін</string>
+    <string name="profession_thousand_hour"> У якім гаворыцца каб стаць прафесіяналам у пэўнай вобласці, трэба выдаткаваць на яе вывучэнне каля 10 тысяч гадзін</string>
     <string name="work_stopwatch_timer">Націснуўшы на гэтую кнопку вы можаце стварыць новы працэс, папрацаваць з таймерам ці ж з секундамерам</string>
-    <string name="list_standup">\" Ваш спіс стэндапов\"</string>
+    <string name="list_standup"> Ваш спіс стэндапов</string>
     <string name="team_work">Гэта акно створана на аснове сістэмы каманднай працы</string>
-    <string name="plan_and_problem_share">\" Где участники команды ежедневоно создают отчёт о проделанной работе и деляться со своми планами и проблемами  \"</string>
+    <string name="plan_and_problem_share"> Где участники команды ежедневоно создают отчёт о проделанной работе и деляться со своми планами и проблемами </string>
     <string name="good_system">Гэта вельмі добрая сістэма, каб трымаць сябе ў тонусе</string>
-    <string name="good_friend_standup">\" Вы можаце папрасіць добрага знаёмага каб ён сачыў за складаннем стэндапов\"</string>
-    <string name="share_fun_send">\" І там як раз ёсць функцыя падзяліцца каб вы маглі яго адправіць\"</string>
-    <string name="create_new_standup">\" Націснуўшы на гэтую кнопку вы можаце стварыць новы стендап\"</string>
+    <string name="good_friend_standup"> Вы можаце папрасіць добрага знаёмага каб ён сачыў за складаннем стэндапов</string>
+    <string name="share_fun_send"> І там як раз ёсць функцыя падзяліцца каб вы маглі яго адправіць</string>
+    <string name="create_new_standup"> Націснуўшы на гэтую кнопку вы можаце стварыць новы стендап</string>
     <string name="list_dream">Ваш спіс дзе збіраюцца вашыя запісы звязаныя са сном</string>
-    <string name="up_slept_hour">\" Уверсе паказана колькі гадзін вы праспалі за ўказаны дзень\"</string>
+    <string name="up_slept_hour"> Уверсе паказана колькі гадзін вы праспалі за ўказаны дзень</string>
     <string name="next_time_date">Далей ад якога часу да якога часу і дата</string>
-    <string name="course_record_dream">\"Клікнуўшы на картку Вы можаце паглядзець што снілася ў той дзень, вядома ж калі вы яго запісалі\"</string>
+    <string name="course_record_dream">Клікнуўшы на картку Вы можаце паглядзець што снілася ў той дзень, вядома ж калі вы яго запісалі</string>
     <string name="create_new_record">Націснуўшы на гэтую кнопку вы можаце стварыць новую запіс</string>
-    <string name="folow_finance_window">\" Акно для сачэння за вашы фінансамі\"</string>
-    <string name="new_appear_open">\" Уверсе картка з парадамі звязаныя з фінансамі, новы з\'яўляецца кожны раз калі вы адкрываеце гэта акно\"</string>
-    <string name="main_fun_in_ex">\""Асноўныя функцыі выконваюць кнопкі даходу і расходу\"</string>
-    <string name="template_work">\"Таксама ёсць спіс шаблонных выдаткаў па націску на элемент вы можаце працаваць з ім\"</string>
-    <string name="history_button_ex_te">\"І вядома ж кнопка гісторыі дзе ўлічваецца ўсё акрамя шаблонных выдаткаў\"</string>
+    <string name="folow_finance_window">\" Акно для сачэння за вашы фінансамі</string>
+    <string name="new_appear_open"> Уверсе картка з парадамі звязаныя з фінансамі, новы з\'яўляецца кожны раз калі вы адкрываеце гэта акно</string>
+    <string name="main_fun_in_ex">Асноўныя функцыі выконваюць кнопкі даходу і расходу</string>
+    <string name="template_work">Таксама ёсць спіс шаблонных выдаткаў па націску на элемент вы можаце працаваць з ім</string>
+    <string name="history_button_ex_te">І вядома ж кнопка гісторыі дзе ўлічваецца ўсё акрамя шаблонных выдатка"</string>
+    <string name="template_expensive">Шаблонныя выдаткі</string>
+    <string name="choose_icon">Выбар абразкі</string>
+    <string name="hours"> Гадзіна</string>
+    <string name="minut"> Хвіліна</string>
+    <string name="rewrite_code">1.Перапісаў і перачытаў код з урока</string>
+    <string name="watch_stream">2.Прагледзеў Стрым</string>
+    <string name="write_screen_se_q">3.Напісаў вёрстку для Settings і для Quiz</string>
+    <string name="create_h_st_dao">4.у HistoryStorage стварыў метады для HistoryDao</string>
+    <string name="in_dao_delete">5.у History Dat напісаў метад delete All пад анатацыяй @ Delete</string>
+    <string name="reread_code_q">\"1.Перачытаю код QuizApp для большага разумення\"</string>
+    <string name="impl_f_fi">2.Перайду да рэалізацыі пунктаў 4 і 5</string>
+    <string name="hard_fa_da">Былі складанасці з запаўненнем History фэйкавую дадзенымі</string>
+    <string name="im_sh_pr">- Рэалізаваў адлюстраванне прагрэсу</string>
+    <string name="im_sh_ca">- Рэалізаваў адлюстраванне катэгорыі</string>
+    <string name="im_ba_f_a">- Рэалізаваў адпрацоўку кнопкі back калі першая старонка закрывае Activity</string>
+    <string name="im_b_an">- Рэалізаваў адпрацоўку кнопак на адказ</string>
+    <string name="one_sec_pag">- Паставіў таймер на onAnswerClick каб пры націску на адказ чакаў 1 секунду перш чым перагарнуць на наступнае пытанне</string>
+    <string name="st_sc_qr">\"1.Пачну вёрстку QuizResult\"</string>
+    <string name="im_wi_fi">2.Рэалізую функцыі вызначэння наяўнасці Інтэрнэту або WI-FI</string>
+    <string name="re_q_l_ans">З мяшаннем пытанняў і укладаннем у ліст answer</string>
+    <string name="since">C </string>
+    <string name="before"> Да </string>
+    <string name="gone_to_dream">Сышло на сон</string>
+    <string name="wh_dr_q">Што прыснілася ? ((Не абавязкова)</string>
+    <string name="list_ideas"> Ваш спіс ідэй</string>
+    <string name="vis_im_idea">Візуальны вобраз добры шлях каб замацаваць якая прыйшла ідэю</string>
+    <string name="by_cl_im_sh">Пры кліку на картку малюнак адкрываецца ў поўны памер </string>
+    <string name="cl_ca_re_id">Націснуўшы на гэтую кнопку вы можаце запісаць ідэю</string>
+    <string name="dream_record">Весці ўлік сну</string>
+    <string name="history_empty">Гісторыя пустая</string>
+    <string name="new_event">Новая падзея</string>
+    <string name="diplom_work">Дыпломная праца</string>
+    <string name="phisology">Псіхалогія</string>
 </resources>
