--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -44,7 +44,6 @@
     <string name="achievement_app">Fortschritt</string>
     <string name="add_title">Text eingeben</string>
     <string name="choose_image">Wähle ein Bild:</string>
-    <string name="attention">Beachtung!</string>
     <string name="cancel">Sind Sie sicher, dass Sie löschen möchten?</string>
     <string name="what_to_do">Was würdest du gern tun?</string>
     <string name="help_idea_add">Um eine neue Idee hinzuzufügen, klicken Sie auf +</string>
@@ -259,7 +258,7 @@ streichen Sie nach rechts, können Sie ein Element aus der Liste der häufigen A
     <string name="flight_over_city">Flug über Ihre Stadt</string>
     <string name="my_dream_in_dream">Ich hatte einen Traum in einem Traum, der ein Traum war</string>
     <string name="congratulation">Gratulierter!</string>
-    <string name="level">\"Ebene \"</string>
+    <string name="level">Ebene </string>
     <string name="you_are_hello">Willkommen</string>
     <string name="tool">Werkzeug</string>
     <string name="got_you_aim">Erreichen Sie Ihre Ziele</string>
@@ -280,7 +279,7 @@ streichen Sie nach rechts, können Sie ein Element aus der Liste der häufigen A
     <string name="side_open_by_click">Die Seite öffnet sich durch Klicken auf den Burger, der in der oberen linken Ecke ist</string>
     <string name="after_instruction">Warten Sie nach dem Wechseln zu jedem Fenster, bis die Instruktion gestartet wird</string>
     <string name="go">Auf los geht\'s los!</string>
-    <string name="you_calendar">\"Ihr Kalender\"</string>
+    <string name="you_calendar">Ihr Kalender</string>
     <string name="show_day">Zeigt die aktualisierten Tage für die nächsten 3 Monate an</string>
     <string name="set_event_new_task">Wenn Sie auf ein Datum klicken, können Sie ein Ereignis oder eine neue Aufgabe an einem bestimmten Wochentag festlegen</string>
     <string name="next_you_cards">Als nächstes kommen Ihre Karten</string>
@@ -289,41 +288,76 @@ streichen Sie nach rechts, können Sie ein Element aus der Liste der häufigen A
     <string name="show_profile">Durch Öffnen der Seitenleiste können Sie Ihr Profil sehen</string>
     <string name="avater_name">Avatar,Name und aktuelle Ebene,um den Avatar und den Namen zu setzen, klicken Sie auf sie</string>
     <string name="lvlup_some_action">Das Niveau steigt für bestimmte Aktionen wie die Erfüllung von Gewohnheiten, Aufgaben und dergleichen</string>
-    <string name="inside_cards_record">\"Karten, in denen Sie Notizen oder Aufgaben aufzeichnen können\"</string>
-    <string name="hold_card">\"Klicken Sie auf eine Karte aus der Liste, um ein Fenster mit Aktionen aufzurufen\"</string>
-    <string name="insert_button">\"Schaltfläche hinzufügen\"</string>
+    <string name="inside_cards_record">Karten, in denen Sie Notizen oder Aufgaben aufzeichnen können</string>
+    <string name="hold_card">Klicken Sie auf eine Karte aus der Liste, um ein Fenster mit Aktionen aufzurufen</string>
+    <string name="insert_button">Schaltfläche hinzufügen</string>
     <string name="create_new_category_click">Wenn Sie auf diese Schaltfläche klicken, können Sie eine neue Karte erstellen, indem Sie den Namen der Kategorie und das Symbol angeben</string>
-    <string name="under_everyday">\" Unter jedem Tag versteckt sich eine Liste, die Sie ausfüllen können\"</string>
+    <string name="under_everyday"> Unter jedem Tag versteckt sich eine Liste, die Sie ausfüllen können</string>
     <string name="cause_see">Um zu sehen, was für einen bestimmten Tag geplant ist, klicken Sie darauf</string>
-    <string name="hold_task_action">\""Sie können eine geplante Aufgabe aus der Liste festlegen, um ein Fenster mit Aktionen aufzurufen\"</string>
+    <string name="hold_task_action">Sie können eine geplante Aufgabe aus der Liste festlegen, um ein Fenster mit Aktionen aufzurufen</string>
     <string name="click_here_button">Wenn Sie auf diese Schaltfläche klicken, können Sie einen Fall für einen bestimmten Wochentag erstellen</string>
     <string name="planning_events">Ihre Liste der geplanten Ereignisse</string>
-    <string name="set_remind_by_wish">\" Optional können Sie eine Erinnerung einstellen\"</string>
+    <string name="set_remind_by_wish"> Optional können Sie eine Erinnerung einstellen</string>
     <string name="create_ev_date">Wenn Sie auf diese Schaltfläche klicken, können Sie Ereignisse für ein bestimmtes Datum erstellen</string>
     <string name="list_habit">Ihre Liste der Gewohnheiten, die Sie zu sich selbst vermitteln wollen</string>
     <string name="in_left_day">Auf der linken Seite wird angegeben, wie viele Tage Sie bereits eine Gewohnheit festigen</string>
-    <string name="in_right_hold">\"Auf der rechten Seite, wie viele Tage Sie brauchen, um zu halten\"</string>
-    <string name="click_by_habit">\""Mit einem Klick auf die Karte können Sie die Erfüllung der Gewohnheit für den aktuellen Tag markieren und mit einem Klick auf die Karte können Sie ein Fenster mit Aktionen aufrufen\"</string>
-    <string name="create_new_habit">\" Durch Klicken auf diese Schaltfläche können Sie eine neue Gewohnheit erstellen\"</string>
+    <string name="in_right_hold">Auf der rechten Seite, wie viele Tage Sie brauchen, um zu halten</string>
+    <string name="click_by_habit">Mit einem Klick auf die Karte können Sie die Erfüllung der Gewohnheit für den aktuellen Tag markieren und mit einem Klick auf die Karte können Sie ein Fenster mit Aktionen aufrufen</string>
+    <string name="create_new_habit"> Durch Klicken auf diese Schaltfläche können Sie eine neue Gewohnheit erstellen</string>
     <string name="list_process">Ihre Liste der Prozesse, auf die Sie sich konzentrieren müssen</string>
-    <string name="theroy_thousand_hour">\" Dieses Fenster basiert auf Theorien von 10.000 Stunden\"</string>
-    <string name="profession_thousand_hour">\" Das heißt, um ein Profi in einem bestimmten Bereich zu werden, müssen Sie etwa 10 Tausend Stunden damit verbringen, es zu studieren\"</string>
+    <string name="theroy_thousand_hour"> Dieses Fenster basiert auf Theorien von 10.000 Stunden</string>
+    <string name="profession_thousand_hour"> Das heißt, um ein Profi in einem bestimmten Bereich zu werden, müssen Sie etwa 10 Tausend Stunden damit verbringen, es zu studieren</string>
     <string name="work_stopwatch_timer">Wenn Sie auf diese Schaltfläche klicken, können Sie einen neuen Prozess erstellen, mit dem Timer oder mit der Stoppuhr arbeiten</string>
-    <string name="list_standup">\" Ihre Liste der Standups\"</string>
+    <string name="list_standup"> Ihre Liste der Standups\"</string>
     <string name="team_work">Dieses Fenster basiert auf einem Teamwork-SystemDieses Fenster basiert auf einem Teamwork-System</string>
-    <string name="plan_and_problem_share">\" Wo die Teammitglieder täglich einen Bericht über die geleistete Arbeit erstellen und ihre Pläne und Probleme teilen\"</string>
+    <string name="plan_and_problem_share"> Wo die Teammitglieder täglich einen Bericht über die geleistete Arbeit erstellen und ihre Pläne und Probleme teilen</string>
     <string name="good_system">Es ist ein sehr gutes System, um sich fit zu halten</string>
-    <string name="good_friend_standup">\" Sie können einen guten Freund bitten, dass er die Erstellung von Standups verfolgt\"</string>
-    <string name="share_fun_send">\" Und es gibt nur eine Funktion zu teilen, so dass Sie es senden können\"</string>
-    <string name="create_new_standup">\" Wenn Sie auf diese Schaltfläche klicken, können Sie einen neuen Stand erstellen\"</string>
+    <string name="good_friend_standup"> Sie können einen guten Freund bitten, dass er die Erstellung von Standups verfolgt</string>
+    <string name="share_fun_send"> Und es gibt nur eine Funktion zu teilen, so dass Sie es senden können</string>
+    <string name="create_new_standup"> Wenn Sie auf diese Schaltfläche klicken, können Sie einen neuen Stand erstellen</string>
     <string name="list_dream">Ihre Liste wo Ihre schlafbezogenen Aufzeichnungen gesammelt werden</string>
-    <string name="up_slept_hour">\" Oben wird angegeben, wie viele Stunden Sie für den angegebenen Tag verschlafen haben\"</string>
+    <string name="up_slept_hour"> Oben wird angegeben, wie viele Stunden Sie für den angegebenen Tag verschlafen haben</string>
     <string name="next_time_date">Weiter von wie viel zu wie viel und Datum</string>
-    <string name="course_record_dream">\"Wenn Sie auf die Karte klicken, können Sie sehen, was an diesem Tag geträumt wurde, natürlich, wenn Sie es aufgezeichnet haben\"</string>
+    <string name="course_record_dream">Wenn Sie auf die Karte klicken, können Sie sehen, was an diesem Tag geträumt wurde, natürlich, wenn Sie es aufgezeichnet haben</string>
     <string name="create_new_record">Durch Klicken auf diese Schaltfläche können Sie einen neuen Eintrag erstellen</string>
-    <string name="folow_finance_window">\" Fenster, um Ihre Finanzen zu verfolgen\"</string>
-    <string name="new_appear_open">\" An der Spitze der Karte mit Tipps im Zusammenhang mit Finanzen,eine neue erscheint jedes Mal, wenn Sie dieses Fenster öffnen\"</string>
-    <string name="main_fun_in_ex">\""Die wichtigsten Funktionen werden von den Schaltflächen Einnahmen und Ausgaben ausgeführt\"</string>
-    <string name="template_work">\"Es gibt auch eine Liste von Vorlagenkosten durch Klicken auf ein Element, das Sie mit ihm arbeiten können\"</string>
-    <string name="history_button_ex_te">\"Und natürlich die Geschichte Taste, wo berücksichtigt alle zusätzlich zu den Vorlagenkosten\"</string>
+    <string name="folow_finance_window"> Fenster, um Ihre Finanzen zu verfolgen\"</string>
+    <string name="new_appear_open"> An der Spitze der Karte mit Tipps im Zusammenhang mit Finanzen,eine neue erscheint jedes Mal, wenn Sie dieses Fenster öffnen</string>
+    <string name="main_fun_in_ex">Die wichtigsten Funktionen werden von den Schaltflächen Einnahmen und Ausgaben ausgeführt</string>
+    <string name="template_work">Es gibt auch eine Liste von Vorlagenkosten durch Klicken auf ein Element, das Sie mit ihm arbeiten können</string>
+    <string name="history_button_ex_te">Und natürlich die Geschichte Taste, wo berücksichtigt alle zusätzlich zu den Vorlagenkosten</string>
+    <string name="template_expensive">Formelhafte Kosten</string>
+    <string name="choose_icon">Symbol auswählen</string>
+    <string name="hours"> Stunden</string>
+    <string name="minut"> Minuten</string>
+    <string name="rewrite_code">1.Ich habe den Code aus der Lektion neu geschrieben und erneut gelesen</string>
+    <string name="watch_stream">2.Stream angeschaut</string>
+    <string name="write_screen_se_q">3.Ich habe das Layout für Settings und für Quiz geschrieben</string>
+    <string name="create_h_st_dao">4.HistoryStorage hat Methoden für HistoryDao erstellt</string>
+    <string name="in_dao_delete">5.In History schrieb Dat die Methode delete All unter der Annotation @delete</string>
+    <string name="reread_code_q">1.Lesen Sie den QuizApp-Code für mehr Verständnis</string>
+    <string name="impl_f_fi">2.Gehe zur Umsetzung der Punkte 4 und 5</string>
+    <string name="hard_fa_da">Были сложности с заполнением History фейковыми данными</string>
+    <string name="im_sh_pr">-Implementiert die Anzeige des Fortschritts</string>
+    <string name="im_sh_ca">-Implementiert Kategorie Mapping</string>
+    <string name="im_ba_f_a">-Implementiert das Abarbeiten der Back-Taste, wenn die erste Seite die Aktivität schließt</string>
+    <string name="im_b_an">-Realisiert die Arbeit der Tasten auf die Antwort</string>
+    <string name="one_sec_pag">-Setzen Sie den Timer auf onAnswerClick, so dass, wenn Sie auf die Antwort warten 1 Sekunde, bevor Sie auf die nächste Frage zu blättern</string>
+    <string name="st_sc_qr">\"1.Ich beginne das Layout von QuizResult\"</string>
+    <string name="im_wi_fi">2.Ich implementiere die Funktionen der Bestimmung der Anwesenheit des Internets oder WI-FI</string>
+    <string name="re_q_l_ans">Mit dem Mischen von Fragen und dem Answer-Blatt</string>
+    <string name="since">Ab </string>
+    <string name="before"> Bis </string>
+    <string name="gone_to_dream">Ich habe einen Traum</string>
+    <string name="wh_dr_q">Was hast du geträumt ? ((optional)</string>
+    <string name="list_ideas">\" Ihre Ideenliste\"</string>
+    <string name="vis_im_idea">Ein visuelles Bild ist ein guter Weg, um die Idee zu konsolidieren</string>
+    <string name="by_cl_im_sh">Wenn Sie auf die Karte klicken, wird das Bild in voller Größe geöffnet</string>
+    <string name="cl_ca_re_id">Durch Klicken auf diese Schaltfläche können Sie eine Idee aufnehmen</string>
+    <string name="dream_record">Aufzeichnungen über Schlaf führen</string>
+    <string name="history_empty">Geschichte ist leer</string>
+    <string name="date">Datum</string>
+    <string name="settings">Die Einstellungen</string>
+    <string name="new_event">Neue Veranstaltung</string>
+    <string name="diplom_work">Diplomarbeit</string>
+    <string name="phisology">Psychologie</string>
 </resources>
