--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -44,7 +44,6 @@
     <string name="share">To share</string>
     <string name="add_title">Add title</string>
     <string name="choose_image">Add icon: </string>
-    <string name="attention">Attention!</string>
     <string name="cancel">Cancel</string>
     <string name="what_to_do">What would you like to do?</string>
     <string name="help_idea_add">For adding a new idea, click on +</string>
@@ -260,7 +259,7 @@ swiping to the right, you can remove an Item from the list of frequent spenders.
     <string name="flight_over_city">Flying over your city</string>
     <string name="my_dream_in_dream">I had a dream in a dream that was a dream</string>
     <string name="congratulation">Congratulations!</string>
-    <string name="level">\"Level \"</string>
+    <string name="level">Level </string>
     <string name="you_are_hello">You are welcomed</string>
     <string name="tool">The tool</string>
     <string name="got_you_aim">Achieving your goals</string>
@@ -281,7 +280,7 @@ swiping to the right, you can remove an Item from the list of frequent spenders.
     <string name="side_open_by_click">The side one opens by clicking on the burger which is located in the upper left corner</string>
     <string name="after_instruction">After switching to each of the windows, wait for the briefing to start</string>
     <string name="go">Let\'s go!</string>
-    <string name="you_calendar">\"Your calendar\"</string>
+    <string name="you_calendar">Your calendar</string>
     <string name="show_day">Displays the days updated for the next 3 months</string>
     <string name="set_event_new_task">By clicking on the date you can set an event or a new task on a certain day of the week By clicking on the date you can set an event or a new task on a certain day of the week</string>
     <string name="next_you_cards">Next come your cards</string>
@@ -290,41 +289,75 @@ swiping to the right, you can remove an Item from the list of frequent spenders.
     <string name="show_profile">By opening the sidebar you can see your profile</string>
     <string name="avater_name">Avatar, name and current level, in order to set the avatar and name, click on them</string>
     <string name="lvlup_some_action">The level increases for certain actions such as performing habits, tasks, and the like</string>
-    <string name="inside_cards_record">\"Cards inside which you can write notes or tasks\"</string>
-    <string name="hold_card">\"Click on a card from the list to open a window with actions\"</string>
-    <string name="insert_button">\"Add button\"</string>
+    <string name="inside_cards_record">Cards inside which you can write notes or tasks</string>
+    <string name="hold_card">Click on a card from the list to open a window with actions</string>
+    <string name="insert_button">Add button</string>
     <string name="create_new_category_click">By clicking on this button, you can create a new card by specifying the category name and icon</string>
-    <string name="under_everyday">\" There is a list hidden under every day that can be filled out\"</string>
+    <string name="under_everyday"> There is a list hidden under every day that can be filled out</string>
     <string name="cause_see">To see what is planned for a particular day, click on it</string>
-    <string name="hold_task_action">\""You can set a scheduled task from the list to open a window with actions\"</string>
+    <string name="hold_task_action">You can set a scheduled task from the list to open a window with actions</string>
     <string name="click_here_button">By clicking on this button you can create cases for a specific day of the week</string>
     <string name="planning_events">Your list of scheduled events</string>
-    <string name="set_remind_by_wish">\" Optionally, you can set a reminder\"</string>
+    <string name="set_remind_by_wish"> Optionally, you can set a reminder</string>
     <string name="create_ev_date">By clicking on this button you can create events for a specific date</string>
     <string name="list_habit">Your list of habits that you want to instill in yourself</string>
     <string name="in_left_day">On the left is indicated how many days you have already fixed the habit</string>
-    <string name="in_right_hold">\"On the right, how many days do you need to hold on\"</string>
-    <string name="click_by_habit">\""By clicking on the card you can mark the completion of the habit for the current day and by pressing on the card you can open a window with actions\"</string>
-    <string name="create_new_habit">\" By clicking on this button you can create a new habit\"</string>
+    <string name="in_right_hold">On the right, how many days do you need to hold on</string>
+    <string name="click_by_habit">By clicking on the card you can mark the completion of the habit for the current day and by pressing on the card you can open a window with actions</string>
+    <string name="create_new_habit"> By clicking on this button you can create a new habit</string>
     <string name="list_process">Your list of processes that require concentration</string>
-    <string name="theroy_thousand_hour">\" This window is created based on the theories of 10,000 hours\"</string>
-    <string name="profession_thousand_hour">\" Which says to become a professional in a certain field, you need to spend about 10 thousand hours studying it\"</string>
+    <string name="theroy_thousand_hour"> This window is created based on the theories of 10,000 hours</string>
+    <string name="profession_thousand_hour"> Which says to become a professional in a certain field, you need to spend about 10 thousand hours studying it</string>
     <string name="work_stopwatch_timer">By clicking on this button, you can create a new process, work with a timer or with a stopwatch</string>
-    <string name="list_standup">\" Your list of standups\"</string>
+    <string name="list_standup"> Your list of standups</string>
     <string name="team_work">This window is based on a team work system</string>
-    <string name="plan_and_problem_share">\" Where team members create a daily progress report and share their plans and problems\"</string>
+    <string name="plan_and_problem_share"> Where team members create a daily progress report and share their plans and problems</string>
     <string name="good_system">This is a very good system to keep yourself in good shape</string>
-    <string name="good_friend_standup">\" You can ask a good friend to follow the compilation of standups\"</string>
-    <string name="share_fun_send">\" And there is just a share function so that you can send it\"</string>
-    <string name="create_new_standup">\" By clicking on this button you can create a new standup\"</string>
+    <string name="good_friend_standup"> You can ask a good friend to follow the compilation of standups</string>
+    <string name="share_fun_send"> And there is just a share function so that you can send it</string>
+    <string name="create_new_standup"> By clicking on this button you can create a new standup</string>
     <string name="list_dream">Your list where your sleep related records are collected</string>
-    <string name="up_slept_hour">\" At the top it shows how many hours you slept during the specified day\"</string>
+    <string name="up_slept_hour"> At the top it shows how many hours you slept during the specified day</string>
     <string name="next_time_date">Then from how many to how many and the date</string>
-    <string name="course_record_dream">\"By clicking on the card , you can see what you dreamed that day , of course , if you recorded it\"</string>
+    <string name="course_record_dream">\"By clicking on the card , you can see what you dreamed that day , of course , if you recorded it</string>
     <string name="create_new_record">By clicking on this button you can create a new entry</string>
-    <string name="folow_finance_window">\" A window for tracking your finances\"</string>
-    <string name="new_appear_open">\" At the top is a card with financial-related tips, a new one appears every time you open this window\"</string>
-    <string name="main_fun_in_ex">\""The main functions are performed by the Income and Expense buttons\"</string>
-    <string name="template_work">\"There is also a list of template expenses by clicking on an item you can work with it\"</string>
+    <string name="folow_finance_window"> A window for tracking your finances\"</string>
+    <string name="new_appear_open"> At the top is a card with financial-related tips, a new one appears every time you open this window</string>
+    <string name="main_fun_in_ex">The main functions are performed by the Income and Expense buttons</string>
+    <string name="template_work">There is also a list of template expenses by clicking on an item you can work with it</string>
     <string name="history_button_ex_te">\"And of course, the history button where everything is taken into account in addition to template expenses\"</string>
+    <string name="template_expensive">Template expenses</string>
+    <string name="choose_icon">Icon Selection</string>
+    <string name="hours"> Hours</string>
+    <string name="minut"> Minutes</string>
+    <string name="rewrite_code">1. Rewrote and reread the code from the lesson</string>
+    <string name="watch_stream">2. Watched the stream</string>
+    <string name="write_screen_se_q">3. Wrote the layout for Settings and for Quiz</string>
+    <string name="create_h_st_dao">4.in HistoryStorage created methods for HistoryDao</string>
+    <string name="in_dao_delete">5.in History Dat, I wrote the delete All method under the @delete annotation</string>
+    <string name="reread_code_q">1. I\'ll reread the QuizApp code for more understanding</string>
+    <string name="impl_f_fi">2. I will proceed to the implementation of paragraphs 4 and 5</string>
+    <string name="hard_fa_da">There were difficulties with filling History with fake data</string>
+    <string name="im_sh_pr">-Implemented progress display</string>
+    <string name="im_sh_ca">-Implemented category mapping</string>
+    <string name="im_ba_f_a">-Implemented testing of the back button if the first page closes the Activity</string>
+    <string name="im_b_an">-Implemented the testing of the response buttons</string>
+    <string name="one_sec_pag">-Set the timer on onAnswerClick so that when you click on the answer, you wait 1 second before flipping to the next question</string>
+    <string name="st_sc_qr">1.I will start the layout of QuizResult</string>
+    <string name="im_wi_fi">2.I implement the functions of determining the availability of Internet or WI-FI</string>
+    <string name="re_q_l_ans">With mixing of questions and embedding in the answer sheet</string>
+    <string name="since">Since </string>
+    <string name="before"> Before </string>
+    <string name="gone_to_dream">\"Gone to sleep\"</string>
+    <string name="wh_dr_q">What did you dream ? ((Optional)</string>
+    <string name="list_ideas"> Your list of ideas</string>
+    <string name="vis_im_idea">A visual image is a good way to consolidate the idea that has come</string>
+    <string name="by_cl_im_sh">When you click on the card, the picture opens in full size</string>
+    <string name="cl_ca_re_id">By clicking on this button you can write down an idea</string>
+    <string name="dream_record">Keep a record of sleep</string>
+    <string name="history_empty">History is empty</string>
+    <string name="read">Read</string>
+    <string name="new_event">New event</string>
+    <string name="diplom_work">Graduate work</string>
+    <string name="phisology">Psychology</string>
 </resources>
