--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -43,7 +43,6 @@
     <string name="share">Compartir</string>
     <string name="add_title">Escriba el texto</string>
     <string name="choose_image">Seleccione una imagen:</string>
-    <string name="attention">¡Atención!</string>
     <string name="cancel">Cancelación</string>
     <string name="what_to_do">¿Qué te gustaría hacer?</string>
     <string name="help_idea_add">Para añadir una nueva idea, haga clic en +</string>
@@ -260,7 +259,7 @@ al deslizar hacia la derecha, puede eliminar un Elemento de la lista de gastos f
     <string name="flight_over_city">Volando sobre su ciudad</string>
     <string name="my_dream_in_dream">Tuve un sueño en un sueño que era un sueño</string>
     <string name="congratulation">Felicitado!</string>
-    <string name="level">\"Nivel \"</string>
+    <string name="level">Nivel </string>
     <string name="you_are_hello">Bienvenido</string>
     <string name="tool">Herramienta</string>
     <string name="got_you_aim">Alcanzar sus metas</string>
@@ -275,13 +274,13 @@ al deslizar hacia la derecha, puede eliminar un Elemento de la lista de gastos f
     <string name="fix_idea">Fijar ideas</string>
     <string name="lets_start">Vamos a empezar !</string>
     <string name="click_by_screen">Haga clic en la pantalla</string>
-    <string name="before_start">\""Antes de comenzar, sugerimos familiarizarse con la aplicación\"</string>
+    <string name="before_start">Antes de comenzar, sugerimos familiarizarse con la aplicación</string>
     <string name="two_tools">Aquí hay dos herramientas de navegación</string>
     <string name="bottom_and_side">Inferior y lateral</string>
     <string name="side_open_by_click">El lado se abre haciendo clic en la hamburguesa que se encuentra en la esquina superior izquierda</string>
     <string name="after_instruction">Después de cambiar a cada una de las ventanas, espere a que comience el instructivo</string>
     <string name="go">¡Vamos !</string>
-    <string name="you_calendar">\"Su calendario\"</string>
+    <string name="you_calendar">Su calendario</string>
     <string name="show_day">Muestra los días de actualización para los próximos 3 meses</string>
     <string name="set_event_new_task">Al pellizcar en una fecha, puede establecer un evento o una nueva tarea en un día específico de la semana</string>
     <string name="next_you_cards">Luego vienen tus tarjetas</string>
@@ -291,40 +290,73 @@ al deslizar hacia la derecha, puede eliminar un Elemento de la lista de gastos f
     <string name="avater_name">Avatar, nombre y nivel actual, para establecer el avatar y el nombre haga clic en ellos</string>
     <string name="lvlup_some_action">El nivel aumenta para ciertas acciones tales como la realización de hábitos, tareas y similares</string>
     <string name="inside_cards_record">\"Tarjetas dentro de las cuales puede grabar notas o tareas\"</string>
-    <string name="hold_card">\"Haga clic en una tarjeta de la lista para abrir una ventana de acciones\"</string>
-    <string name="insert_button">\"Botón agregar\"</string>
+    <string name="hold_card">Haga clic en una tarjeta de la lista para abrir una ventana de acciones</string>
+    <string name="insert_button">Botón agregar</string>
     <string name="create_new_category_click">Al hacer clic en este botón, puede crear una nueva tarjeta especificando el nombre de la categoría y el icono</string>
-    <string name="under_everyday">\" Debajo de cada día se esconde una lista que se puede llenar\"</string>
+    <string name="under_everyday"> Debajo de cada día se esconde una lista que se puede llenar</string>
     <string name="cause_see">Para ver lo que está programado para un día en particular, haga clic en él</string>
-    <string name="hold_task_action">\""Puede especificar una tarea programada de la lista para abrir una ventana de acciones\"</string>
+    <string name="hold_task_action">Puede especificar una tarea programada de la lista para abrir una ventana de acciones</string>
     <string name="click_here_button">Al hacer clic en este botón, puede crear casos para un día específico de la semana</string>
     <string name="planning_events">Su lista de eventos programados</string>
-    <string name="set_remind_by_wish">\" Opcionalmente, puede establecer un recordatorio\"</string>
+    <string name="set_remind_by_wish"> Opcionalmente, puede establecer un recordatorio</string>
     <string name="create_ev_date">Al hacer clic en este botón puede crear eventos para una fecha específica</string>
     <string name="list_habit">Tu lista de hábitos que quieres inculcar</string>
     <string name="in_left_day">La izquierda indica Cuántos días ya está consolidando el hábito</string>
-    <string name="in_right_hold">\"A la derecha, ¿Cuántos días hay que aguantar\"</string>
-    <string name="click_by_habit">\""Al hacer clic en la tarjeta, puede marcar la ejecución del hábito para el día actual y al hacer clic en la tarjeta, puede abrir una ventana con acciones\"</string>
-    <string name="create_new_habit">\" Al hacer clic en este botón se puede crear un nuevo hábito\"</string>
+    <string name="in_right_hold">A la derecha, ¿Cuántos días hay que aguantar\"</string>
+    <string name="click_by_habit">Al hacer clic en la tarjeta, puede marcar la ejecución del hábito para el día actual y al hacer clic en la tarjeta, puede abrir una ventana con acciones</string>
+    <string name="create_new_habit"> Al hacer clic en este botón se puede crear un nuevo hábito</string>
     <string name="list_process">Su lista de procesos en los que se requiere concentración</string>
-    <string name="theroy_thousand_hour">\" Esta ventana se basa en teorías de 10.000 horas\"</string>
-    <string name="profession_thousand_hour">\" Que dice que para convertirse en un profesional en un área determinada, debe pasar unas 10 mil horas en su estudio\"</string>
+    <string name="theroy_thousand_hour"> Esta ventana se basa en teorías de 10.000 horas</string>
+    <string name="profession_thousand_hour"> Que dice que para convertirse en un profesional en un área determinada, debe pasar unas 10 mil horas en su estudio</string>
     <string name="work_stopwatch_timer">Al hacer clic en este botón, puede crear un nuevo proceso,trabajar con un temporizador o con un cronómetro</string>
-    <string name="list_standup">\" Su lista de standups\"</string>
+    <string name="list_standup"> Su lista de standups</string>
     <string name="team_work">Esta ventana se crea a partir del sistema de trabajo en equipo</string>
-    <string name="plan_and_problem_share">\" Donde los miembros del equipo crean un informe de progreso diario y comparten sus planes e inquietudes\"</string>
+    <string name="plan_and_problem_share"> Donde los miembros del equipo crean un informe de progreso diario y comparten sus planes e inquietudes</string>
     <string name="good_system">Este es un muy buen sistema para mantenerse en forma</string>
-    <string name="good_friend_standup">\" Puedes pedirle a un buen amigo que siga la composición de los standups\"</string>
-    <string name="share_fun_send">\" Y hay una función para compartir para que pueda enviarlo\"</string>
-    <string name="create_new_standup">\" Al hacer clic en este botón se puede crear un nuevo Standup\"</string>
+    <string name="good_friend_standup"> Puedes pedirle a un buen amigo que siga la composición de los standups</string>
+    <string name="share_fun_send"> Y hay una función para compartir para que pueda enviarlo\"</string>
+    <string name="create_new_standup"> Al hacer clic en este botón se puede crear un nuevo Standup</string>
     <string name="list_dream">Su lista donde se recogen sus registros relacionados con el sueño</string>
-    <string name="up_slept_hour">\" En la parte superior se indica cuántas horas dormiste durante el día especificado\"</string>
+    <string name="up_slept_hour"> En la parte superior se indica cuántas horas dormiste durante el día especificado</string>
     <string name="next_time_date">Más lejos de cuánto a cuánto y fecha</string>
-    <string name="course_record_dream">\"Al hacer clic en la tarjeta, puedes ver lo que soñaste ese día, por supuesto, si lo escribiste\"</string>
+    <string name="course_record_dream">Al hacer clic en la tarjeta, puedes ver lo que soñaste ese día, por supuesto, si lo escribiste</string>
     <string name="create_new_record">Al hacer clic en este botón se puede crear una nueva entrada</string>
-    <string name="folow_finance_window">\"Una ventana para rastrear sus finanzas\"</string>
-    <string name="new_appear_open">\" En la parte superior de la tarjeta con consejos relacionados con las finanzas, aparece una nueva cada vez que abra esta ventana\"</string>
-    <string name="main_fun_in_ex">\""Las funciones principales son los botones de Ingresos y Gastos\"</string>
-    <string name="template_work">\"También hay una lista de gastos de plantilla al hacer clic en un elemento que puede trabajar con él\"</string>
-    <string name="history_button_ex_te">\"Y, por supuesto, el botón de la historia donde se tiene en cuenta todo, además de los gastos de plantilla\"</string>
+    <string name="folow_finance_window">Una ventana para rastrear sus finanzas</string>
+    <string name="new_appear_open"> En la parte superior de la tarjeta con consejos relacionados con las finanzas, aparece una nueva cada vez que abra esta ventana</string>
+    <string name="main_fun_in_ex">Las funciones principales son los botones de Ingresos y Gastos</string>
+    <string name="template_work">También hay una lista de gastos de plantilla al hacer clic en un elemento que puede trabajar con él</string>
+    <string name="history_button_ex_te">Y, por supuesto, el botón de la historia donde se tiene en cuenta todo, además de los gastos de plantilla</string>
+    <string name="template_expensive">Gastos de plantilla</string>
+    <string name="choose_icon">Выбор иконки</string>
+    <string name="hours"> Horas</string>
+    <string name="minut"> Minutos</string>
+    <string name="rewrite_code">1.Reescribió y volvió a Leer el código de la lección</string>
+    <string name="watch_stream">2.Visto Stream</string>
+    <string name="write_screen_se_q">3.Escribió el diseño para Settings y para Quiz</string>
+    <string name="create_h_st_dao">4.el HistoryStorage creó métodos para HistoryDao</string>
+    <string name="in_dao_delete">5.en History, DAT escribió el método delete All bajo la anotación @Delete</string>
+    <string name="reread_code_q">\"1.Releer el código de QuizApp para una mayor comprensión\"</string>
+    <string name="impl_f_fi">2.Procederé a la implementación de los párrafos 4 y 5</string>
+    <string name="hard_fa_da">Hubo dificultades para completar History con datos falsos</string>
+    <string name="im_sh_pr">-Implementé muestra el progreso</string>
+    <string name="im_sh_ca">- Implementado Mostrar categoría</string>
+    <string name="im_ba_f_a">- Implementó el botón de retroceso si la primera página cierra la actividad</string>
+    <string name="im_b_an">- Implementó el ajuste de los botones de respuesta</string>
+    <string name="one_sec_pag">- Configuró el temporizador en onAnswerClick para que al hacer clic en la respuesta espere 1 segundo antes de pasar a la siguiente pregunta</string>
+    <string name="st_sc_qr">1.Voy a empezar a escribir QuizResult</string>
+    <string name="im_wi_fi">2.Implemento funciones para determinar la disponibilidad de Internet o WI-FI</string>
+    <string name="re_q_l_ans">Con preguntas aleatorias y anidadas en la hoja de answer</string>
+    <string name="since">Con </string>
+    <string name="before"> Hasta </string>
+    <string name="gone_to_dream">\"Se fue a dormir\"</string>
+    <string name="wh_dr_q">¿Qué soñaste ? ((Opcional)</string>
+    <string name="list_ideas">\" Su lista de ideas\"</string>
+    <string name="vis_im_idea">La imagen Visual es una buena manera de consolidar la idea que vino</string>
+    <string name="by_cl_im_sh">Al hacer clic en la tarjeta, la imagen se abre en Tamaño completo</string>
+    <string name="cl_ca_re_id">Al hacer clic en este botón se puede grabar la idea</string>
+    <string name="dream_record">Mantener un registro del sueño</string>
+    <string name="history_empty">La historia está vacía</string>
+    <string name="new_event">Nuevo evento</string>
+    <string name="diplom_work">Tesina</string>
+    <string name="phisology">Psicología</string>
 </resources>
