--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -43,7 +43,6 @@
     <string name="share">Partager</string>
     <string name="add_title">Entrez le texte</string>
     <string name="choose_image">Sélectionnez une image:</string>
-    <string name="attention">Attention!</string>
     <string name="cancel">Annulation</string>
     <string name="what_to_do">Que voudriez-vous faire?</string>
     <string name="help_idea_add">Pour ajouter une nouvelle idée, cliquez sur +</string>
@@ -260,7 +259,7 @@ glisser vers la droite, vous pouvez supprimer un Élément de la liste des dépe
     <string name="flight_over_city">Voler au-dessus de votre ville</string>
     <string name="my_dream_in_dream">J\'ai fait un rêve dans un rêve qui était un rêve</string>
     <string name="congratulation">Félicitant!</string>
-    <string name="level">\"Niveau \"</string>
+    <string name="level">Niveau </string>
     <string name="you_are_hello">Bienvenue</string>
     <string name="tool">Outil</string>
     <string name="got_you_aim">Atteindre vos objectifs</string>
@@ -275,7 +274,7 @@ glisser vers la droite, vous pouvez supprimer un Élément de la liste des dépe
     <string name="fix_idea">Fixer des idées</string>
     <string name="lets_start">Nous allons commencer !</string>
     <string name="click_by_screen">Cliquez sur l\'écran</string>
-    <string name="before_start">\""Avant de commencer, nous vous suggérons de vous familiariser avec l'application\"</string>
+    <string name="before_start">Avant de commencer, nous vous suggérons de vous familiariser avec l\'application</string>
     <string name="two_tools">Deux outils de navigation sont disponibles ici</string>
     <string name="bottom_and_side">Inférieur et latéral</string>
     <string name="side_open_by_click">Côté ouvre en cliquant sur le Burger qui est situé dans le coin supérieur gauche</string>
@@ -290,41 +289,75 @@ glisser vers la droite, vous pouvez supprimer un Élément de la liste des dépe
     <string name="show_profile">En ouvrant la barre latérale, vous pouvez voir votre profil</string>
     <string name="avater_name">Avatar, le nom et le niveau actuel, pour définir l\'avatar et le nom cliquez sur eux</string>
     <string name="lvlup_some_action">Le niveau augmente pour certaines actions telles que l\'exécution des habitudes,des tâches, etc.</string>
-    <string name="inside_cards_record">\"Cartes à l\'intérieur de laquelle vous pouvez enregistrer des notes ou des tâches\"</string>
-    <string name="hold_card">\"Pincez la carte de la liste pour déclencher une fenêtre d\'action\"</string>
-    <string name="insert_button">\"Bouton ajouter\"</string>
+    <string name="inside_cards_record">Cartes à l\'intérieur de laquelle vous pouvez enregistrer des notes ou des tâches</string>
+    <string name="hold_card">Pincez la carte de la liste pour déclencher une fenêtre d\'action</string>
+    <string name="insert_button">Bouton ajouter</string>
     <string name="create_new_category_click">En cliquant sur ce bouton, vous pouvez créer une nouvelle carte en spécifiant le nom de la catégorie et l\'icône</string>
-    <string name="under_everyday">\" Sous chaque jour se cache une liste que vous pouvez remplir\"</string>
+    <string name="under_everyday"> Sous chaque jour se cache une liste que vous pouvez remplir</string>
     <string name="cause_see">Pour voir ce qui est prévu pour un jour ou un autre, cliquez dessus</string>
-    <string name="hold_task_action">\""Vous pouvez définir une tâche planifiée dans la liste pour afficher une fenêtre d'action\"</string>
+    <string name="hold_task_action">Vous pouvez définir une tâche planifiée dans la liste pour afficher une fenêtre d\'action</string>
     <string name="click_here_button">En cliquant sur ce bouton, vous pouvez créer des cas pour un jour spécifique de la semaine</string>
     <string name="planning_events">Votre liste d\'événements planifiés</string>
-    <string name="set_remind_by_wish">\" En option, vous pouvez définir un rappel\"</string>
+    <string name="set_remind_by_wish"> En option, vous pouvez définir un rappel</string>
     <string name="create_ev_date">En cliquant sur ce bouton, vous pouvez créer des événements à une date spécifique</string>
     <string name="list_habit">Votre liste d\'habitudes que vous voulez vous inculquer</string>
     <string name="in_left_day">La gauche indique combien de jours vous avez déjà fixé l\'habitude</string>
-    <string name="in_right_hold">\"À droite, combien de jours faut-il tenir\"</string>
-    <string name="click_by_habit">\""En cliquant sur la carte, vous pouvez marquer l'exécution de l'habitude pour la journée en cours et en appuyant sur la carte, vous pouvez appeler la fenêtre d'action\"</string>
-    <string name="create_new_habit">\" En cliquant sur ce bouton, vous pouvez créer une nouvelle habitude\"</string>
+    <string name="in_right_hold">À droite, combien de jours faut-il tenir\"</string>
+    <string name="click_by_habit">En cliquant sur la carte, vous pouvez marquer l\'exécution de l\'habitude pour la journée en cours et en appuyant sur la carte, vous pouvez appeler la fenêtre d\'action</string>
+    <string name="create_new_habit"> En cliquant sur ce bouton, vous pouvez créer une nouvelle habitude</string>
     <string name="list_process">Votre liste de processus sur lesquels vous avez besoin de concentration</string>
-    <string name="theroy_thousand_hour">\" Cette fenêtre est basée sur les théories de 10 000 heures\"</string>
-    <string name="profession_thousand_hour">\" Dans lequel il est dit de devenir un professionnel dans un certain domaine, vous devez passer sur son étude d\'environ 10 mille heures\"</string>
+    <string name="theroy_thousand_hour"> Cette fenêtre est basée sur les théories de 10 000 heures</string>
+    <string name="profession_thousand_hour"> Dans lequel il est dit de devenir un professionnel dans un certain domaine, vous devez passer sur son étude d\'environ 10 mille heures</string>
     <string name="work_stopwatch_timer">En cliquant sur ce bouton, vous pouvez créer un nouveau processus, travailler avec une minuterie ou avec un chronomètre</string>
-    <string name="list_standup">\" Votre liste de stand-up\"</string>
+    <string name="list_standup"> Votre liste de stand-up</string>
     <string name="team_work">Cette fenêtre est basée sur le système de travail en équipe</string>
-    <string name="plan_and_problem_share">\" Où les membres de l\'équipe créent un rapport de travail quotidien et partagent leurs plans et leurs préoccupations\"</string>
+    <string name="plan_and_problem_share"> Où les membres de l\'équipe créent un rapport de travail quotidien et partagent leurs plans et leurs préoccupations</string>
     <string name="good_system">C\'est un très bon système pour rester en forme</string>
-    <string name="good_friend_standup">\" Vous pouvez demander à un bon ami de suivre la composition des standaps\"</string>
-    <string name="share_fun_send">\" Et il y a juste une fonction pour partager afin que vous puissiez l\'envoyer\"</string>
-    <string name="create_new_standup">\" En cliquant sur ce bouton, vous pouvez créer un nouveau stand\"</string>
+    <string name="good_friend_standup"> Vous pouvez demander à un bon ami de suivre la composition des standaps</string>
+    <string name="share_fun_send"> Et il y a juste une fonction pour partager afin que vous puissiez l\'envoyer</string>
+    <string name="create_new_standup"> En cliquant sur ce bouton, vous pouvez créer un nouveau stand</string>
     <string name="list_dream">Votre liste où vos dossiers liés au sommeil sont collectés</string>
-    <string name="up_slept_hour">\" Le haut indique combien d\'heures vous avez dormi pour le jour spécifié\"</string>
+    <string name="up_slept_hour"> Le haut indique combien d\'heures vous avez dormi pour le jour spécifié</string>
     <string name="next_time_date">Plus loin de combien à combien et date</string>
-    <string name="course_record_dream">\"En cliquant sur la carte, vous pouvez voir ce qui a été rêvé ce jour-là, bien sûr, si vous l\'avez enregistré\"</string>
+    <string name="course_record_dream">En cliquant sur la carte, vous pouvez voir ce qui a été rêvé ce jour-là, bien sûr, si vous l\'avez enregistré</string>
     <string name="create_new_record">En cliquant sur ce bouton, vous pouvez créer une nouvelle entrée</string>
-    <string name="folow_finance_window">\" Une fenêtre pour suivre vos Finances\"</string>
-    <string name="new_appear_open">\" En haut de la carte avec des conseils liés aux Finances, un nouveau apparaît chaque fois que vous ouvrez cette fenêtre\"</string>
-    <string name="main_fun_in_ex">\""Les fonctions principales sont effectuées par les boutons de Revenu et de Débit\"</string>
-    <string name="template_work">\"Il y a aussi une liste des dépenses de modèle en cliquant sur un élément que vous pouvez travailler avec elle\"</string>
+    <string name="folow_finance_window"> Une fenêtre pour suivre vos Finances</string>
+    <string name="new_appear_open"> En haut de la carte avec des conseils liés aux Finances, un nouveau apparaît chaque fois que vous ouvrez cette fenêtre</string>
+    <string name="main_fun_in_ex">Les fonctions principales sont effectuées par les boutons de Revenu et de Débit</string>
+    <string name="template_work">Il y a aussi une liste des dépenses de modèle en cliquant sur un élément que vous pouvez travailler avec elle</string>
     <string name="history_button_ex_te">\"Et bien sûr, le bouton de l\'histoire où tout est pris en compte en plus des coûts standard\"</string>
+    <string name="template_expensive">Modèles consommables</string>
+    <string name="choose_icon">Sélection des icônes</string>
+    <string name="hours"> Montres</string>
+    <string name="minut"> Min</string>
+    <string name="rewrite_code">1.Réécrit et relit le code de la leçon</string>
+    <string name="watch_stream">2.Regardé le flux</string>
+    <string name="write_screen_se_q">3.A écrit la mise en page pour Settings et pour Quiz</string>
+    <string name="create_h_st_dao">4.dans HistoryStorage créé des méthodes pour HistoryDao</string>
+    <string name="in_dao_delete">5.dans History, DAT a écrit la méthode delete All sous l\'annotation @Delete</string>
+    <string name="reread_code_q">\"1.Relisez le code QuizApp pour plus de compréhension\"</string>
+    <string name="impl_f_fi">2.Je vais passer à la mise en œuvre des paragraphes 4 et 5</string>
+    <string name="hard_fa_da">Il y avait des difficultés à remplir History avec de fausses données</string>
+    <string name="im_sh_pr">- Mise en œuvre de l\'affichage des progrès</string>
+    <string name="im_sh_ca">- Mise en œuvre de l\'affichage de la catégorie</string>
+    <string name="im_ba_f_a">- Mise en œuvre du bouton back si la première page ferme l\'activité</string>
+    <string name="im_b_an">- Mise en œuvre du travail sur les boutons de réponse</string>
+    <string name="one_sec_pag">-Mettre la minuterie sur onAnswerClick de sorte que lorsque vous cliquez sur la réponse a attendu 1 seconde avant de retourner à la question suivante</string>
+    <string name="st_sc_qr">1.Je vais commencer la mise en page QuizResult</string>
+    <string name="im_wi_fi">2.Mise en œuvre de la fonction de détection de la présence d\'Internet ou de WI-FI</string>
+    <string name="re_q_l_ans">Avec le mélange de questions et l\'incorporation dans la feuille de réponse</string>
+    <string name="since">Avec </string>
+    <string name="before"> Avant </string>
+    <string name="gone_to_dream">\"Je suis allé dormir\"</string>
+    <string name="wh_dr_q">Que rêvé ? (Pas forcé)</string>
+    <string name="list_ideas">\ "Votre liste d'idées \"</string>
+    <string name="vis_im_idea">L\'image visuelle est un bon moyen de consolider l\'idée venue</string>
+    <string name="by_cl_im_sh">При клике на карточку картинка открывается в полный размер </string>
+    <string name="cl_ca_re_id">En cliquant sur ce bouton, vous pouvez enregistrer l\'idée</string>
+    <string name="dream_record">Tenir un registre du sommeil</string>
+    <string name="history_empty">L\'histoire est vide</string>
+    <string name="new_event">Nouvel événement</string>
+    <string name="diplom_work">Thèse</string>
+    <string name="phisology">Psychologie</string>
+
 </resources>
