--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -45,7 +45,6 @@
     <string name="achievement_app">प्रगति</string>
     <string name="add_title">लिखना प्रारम्भ करें</string>
     <string name="choose_image">एक तस्वीर का चयन करें:</string>
-    <string name="attention">ध्यान!</string>
     <string name="cancel">रद्द करना</string>
     <string name="what_to_do">आप क्या करना पसंद करेंगे?</string>
     <string name="help_idea_add">एक नया विचार जोड़ने के लिए, + पर क्लिक करें</string>
@@ -261,7 +260,7 @@
     <string name="flight_over_city">अपने शहर के ऊपर उड़ान</string>
     <string name="my_dream_in_dream">मेरे पास एक सपने में एक सपना था जो एक सपना था</string>
     <string name="congratulation">मुबारक हो!</string>
-    <string name="level">\"स्तर \"</string>
+    <string name="level">स्तर </string>
     <string name="you_are_hello">आपका स्वागत है</string>
     <string name="tool">उपकरण</string>
     <string name="got_you_aim">अपने लक्ष्यों को प्राप्त करना</string>
@@ -276,7 +275,7 @@
     <string name="fix_idea">विचारों को ठीक करें</string>
     <string name="lets_start">चलो शुरू हो जाओ !</string>
     <string name="click_by_screen">स्क्रीन पर क्लिक करें</string>
-    <string name="before_start">\""शुरू करने से पहले, हम आपको आवेदन से परिचित होने का सुझाव देते हैं\"</string>
+    <string name="before_start">शुरू करने से पहले, हम आपको आवेदन से परिचित होने का सुझाव देते हैं</string>
     <string name="two_tools">यहां दो नेविगेशन टूल उपलब्ध हैं</string>
     <string name="bottom_and_side">लोअर और साइड</string>
     <string name="side_open_by_click">साइड एक बर्गर पर क्लिक करके खुलता है जो ऊपरी बाएं कोने में स्थित है</string>
@@ -291,41 +290,74 @@
     <string name="show_profile">साइडबार खोलकर आप अपनी प्रोफ़ाइल देख सकते हैं</string>
     <string name="avater_name">अवतार, नाम और वर्तमान स्तर, अवतार और नाम सेट करने के लिए, उन पर क्लिक करें</string>
     <string name="lvlup_some_action">कुछ कार्यों के लिए स्तर बढ़ता है जैसे कि प्रदर्शन करने वाली आदतें, कार्य और पसंद</string>
-    <string name="inside_cards_record">\"कार्ड जिसके अंदर आप नोट्स या कार्य लिख सकते हैं\"</string>
-    <string name="hold_card">\"कार्यों के साथ एक विंडो खोलने के लिए सूची से एक कार्ड पर क्लिक करें\"</string>
-    <string name="insert_button">\"बटन जोड़ें \"</string>
+    <string name="inside_cards_record">कार्ड जिसके अंदर आप नोट्स या कार्य लिख सकते हैं</string>
+    <string name="hold_card">कार्यों के साथ एक विंडो खोलने के लिए सूची से एक कार्ड पर क्लिक करें</string>
+    <string name="insert_button">बटन जोड़ें </string>
     <string name="create_new_category_click">इस बटन पर क्लिक करके, आप श्रेणी का नाम और आइकन निर्दिष्ट करके एक नया कार्ड बना सकते हैं</string>
-    <string name="under_everyday">\" हर दिन के नीचे एक सूची छिपी होती है जिसे भरा जा सकता है\"</string>
+    <string name="under_everyday"> हर दिन के नीचे एक सूची छिपी होती है जिसे भरा जा सकता है</string>
     <string name="cause_see">यह देखने के लिए कि किसी विशेष दिन के लिए क्या योजना है, उस पर क्लिक करें</string>
-    <string name="hold_task_action">\""आप कार्यों के साथ एक विंडो खोलने के लिए सूची से एक निर्धारित कार्य सेट कर सकते हैं\"</string>
+    <string name="hold_task_action">आप कार्यों के साथ एक विंडो खोलने के लिए सूची से एक निर्धारित कार्य सेट कर सकते हैं</string>
     <string name="click_here_button">इस बटन पर क्लिक करके आप सप्ताह के एक विशिष्ट दिन के लिए मामले बना सकते हैं</string>
     <string name="planning_events">अनुसूचित घटनाओं की अपनी सूची</string>
-    <string name="set_remind_by_wish">\" वैकल्पिक रूप से, आप एक अनुस्मारक सेट कर सकते हैं\"</string>
+    <string name="set_remind_by_wish"> वैकल्पिक रूप से, आप एक अनुस्मारक सेट कर सकते हैं</string>
     <string name="create_ev_date">इस बटन पर क्लिक करके आप एक विशिष्ट तिथि के लिए ईवेंट बना सकते हैं</string>
     <string name="list_habit">आदतों है कि आप अपने आप में टपकाना चाहते हैं की अपनी सूची</string>
     <string name="in_left_day">बाईं ओर संकेत दिया गया है कि आपने कितने दिन पहले ही आदत तय कर ली है</string>
-    <string name="in_right_hold">\"दाईं ओर, आपको कितने दिनों तक पकड़ना है\"</string>
-    <string name="click_by_habit">\""कार्ड पर क्लिक करके आप वर्तमान दिन के लिए आदत के पूरा होने को चिह्नित कर सकते हैं और कार्ड पर दबाकर आप कार्यों के साथ एक विंडो खोल सकते हैं\"</string>
-    <string name="create_new_habit">\" इस बटन पर क्लिक करके आप एक नई आदत बना सकते हैं\"</string>
+    <string name="in_right_hold">दाईं ओर, आपको कितने दिनों तक पकड़ना है</string>
+    <string name="click_by_habit">कार्ड पर क्लिक करके आप वर्तमान दिन के लिए आदत के पूरा होने को चिह्नित कर सकते हैं और कार्ड पर दबाकर आप कार्यों के साथ एक विंडो खोल सकते हैं</string>
+    <string name="create_new_habit"> इस बटन पर क्लिक करके आप एक नई आदत बना सकते हैं</string>
     <string name="list_process">एकाग्रता की आवश्यकता होती है कि प्रक्रियाओं की अपनी सूची</string>
-    <string name="theroy_thousand_hour">\" यह विंडो 10,000 घंटे के सिद्धांतों के आधार पर बनाई गई है\"</string>
-    <string name="profession_thousand_hour">\" जो एक निश्चित क्षेत्र में एक पेशेवर बनने के लिए कहता है, आपको इसका अध्ययन करने में लगभग 10 हजार घंटे खर्च करने की आवश्यकता है\"</string>
+    <string name="theroy_thousand_hour"> यह विंडो 10,000 घंटे के सिद्धांतों के आधार पर बनाई गई है</string>
+    <string name="profession_thousand_hour"> जो एक निश्चित क्षेत्र में एक पेशेवर बनने के लिए कहता है, आपको इसका अध्ययन करने में लगभग 10 हजार घंटे खर्च करने की आवश्यकता है</string>
     <string name="work_stopwatch_timer">इस बटन पर क्लिक करके, आप एक नई प्रक्रिया बना सकते हैं, टाइमर के साथ या स्टॉपवॉच के साथ काम कर सकते हैं</string>
-    <string name="list_standup">\" अपनी सूची के standups\"</string>
+    <string name="list_standup"> अपनी सूची के standups</string>
     <string name="team_work">यह विंडो एक टीम वर्क सिस्टम पर आधारित है</string>
-    <string name="plan_and_problem_share">\" जहां टीम के सदस्य दैनिक प्रगति रिपोर्ट बनाते हैं और अपनी योजनाओं और समस्याओं को साझा करते हैं\"</string>
+    <string name="plan_and_problem_share"> जहां टीम के सदस्य दैनिक प्रगति रिपोर्ट बनाते हैं और अपनी योजनाओं और समस्याओं को साझा करते हैं</string>
     <string name="good_system">अपने आप को अच्छे आकार में रखने के लिए यह एक बहुत अच्छी प्रणाली है</string>
-    <string name="good_friend_standup">\" आप एक अच्छे दोस्त से स्टैंडअप के संकलन का पालन करने के लिए कह सकते हैं\"</string>
-    <string name="share_fun_send">\" और सिर्फ एक शेयर फ़ंक्शन है ताकि आप इसे भेज सकें\"</string>
-    <string name="create_new_standup">\" Нажав на эту кнопку вы можете создать новый стэндап\"</string>
+    <string name="good_friend_standup"> आप एक अच्छे दोस्त से स्टैंडअप के संकलन का पालन करने के लिए कह सकते हैं\"</string>
+    <string name="share_fun_send"> और सिर्फ एक शेयर फ़ंक्शन है ताकि आप इसे भेज सकें\"</string>
+    <string name="create_new_standup"> Нажав на эту кнопку вы можете создать новый стэндап</string>
     <string name="list_dream">आपकी सूची जहां आपके नींद से संबंधित रिकॉर्ड एकत्र किए जाते हैं</string>
-    <string name="up_slept_hour">\" शीर्ष पर यह दिखाता है कि आप निर्दिष्ट दिन के दौरान कितने घंटे सोते थे\"</string>
+    <string name="up_slept_hour"> शीर्ष पर यह दिखाता है कि आप निर्दिष्ट दिन के दौरान कितने घंटे सोते थे</string>
     <string name="next_time_date">फिर कितने से कितने और तारीख</string>
-    <string name="course_record_dream">\"कार्ड पर क्लिक करके , आप देख सकते हैं कि आपने उस दिन क्या सपना देखा था , ज़ाहिर है , अगर आपने इसे रिकॉर्ड किया है\"</string>
+    <string name="course_record_dream">कार्ड पर क्लिक करके , आप देख सकते हैं कि आपने उस दिन क्या सपना देखा था , ज़ाहिर है , अगर आपने इसे रिकॉर्ड किया है</string>
     <string name="create_new_record">इस बटन पर क्लिक करके आप एक नई प्रविष्टि बना सकते हैं</string>
-    <string name="folow_finance_window">\" अपने वित्त पर नज़र रखने के लिए एक खिड़की\"</string>
-    <string name="new_appear_open">\" शीर्ष पर वित्तीय-संबंधित युक्तियों वाला एक कार्ड है, हर बार जब आप इस विंडो को खोलते हैं तो एक नया दिखाई देता है\"</string>
-    <string name="main_fun_in_ex">\"मुख्य कार्य आय और व्यय बटन द्वारा किया जाता है\"</string>
-    <string name="template_work">\"एक आइटम पर क्लिक करके टेम्पलेट खर्चों की एक सूची भी है जिसे आप इसके साथ काम कर सकते हैं\"</string>
-    <string name="history_button_ex_te">\"और हां, इतिहास बटन जहां टेम्पलेट खर्चों के अलावा सब कुछ ध्यान में रखा जाता है\"</string>
+    <string name="folow_finance_window"> अपने वित्त पर नज़र रखने के लिए एक खिड़की</string>
+    <string name="new_appear_open"> शीर्ष पर वित्तीय-संबंधित युक्तियों वाला एक कार्ड है, हर बार जब आप इस विंडो को खोलते हैं तो एक नया दिखाई देता है</string>
+    <string name="main_fun_in_ex">मुख्य कार्य आय और व्यय बटन द्वारा किया जाता है\"</string>
+    <string name="template_work">एक आइटम पर क्लिक करके टेम्पलेट खर्चों की एक सूची भी है जिसे आप इसके साथ काम कर सकते हैं</string>
+    <string name="history_button_ex_te">और हां, इतिहास बटन जहां टेम्पलेट खर्चों के अलावा सब कुछ ध्यान में रखा जाता है</string>
+    <string name="template_expensive">टेम्पलेट खर्च</string>
+    <string name="choose_icon">चिह्न चयन</string>
+    <string name="hours"> घंटे</string>
+    <string name="minut"> मिनट</string>
+    <string name="rewrite_code">1. पाठ से कोड को फिर से लिखना और फिर से पढ़ना</string>
+    <string name="watch_stream">2. धारा देखी</string>
+    <string name="write_screen_se_q">3. सेटिंग्स के लिए और प्रश्नोत्तरी के लिए लेआउट लिखा था</string>
+    <string name="create_h_st_dao">4.in हिस्टोरस्टोरेज ने हिस्टोरीडाओ के लिए तरीके बनाए</string>
+    <string name="in_dao_delete">5. इतिहास डेटा में, मैंने @डिलीट एनोटेशन के तहत सभी विधि को हटा दिया</string>
+    <string name="reread_code_q">\"1. मैं अधिक समझ के लिए क्विजैप कोड को फिर से पढ़ूंगा\"</string>
+    <string name="impl_f_fi">2. मैं पैराग्राफ 4 और 5 के कार्यान्वयन के लिए आगे बढ़ूंगा</string>
+    <string name="hard_fa_da">फर्जी डेटा के साथ इतिहास भरने में कठिनाइयां थीं</string>
+    <string name="im_sh_pr">- कार्यान्वित प्रगति प्रदर्शन</string>
+    <string name="im_sh_ca">- कार्यान्वित श्रेणी मानचित्रण</string>
+    <string name="im_ba_f_a">- पहला पृष्ठ गतिविधि बंद कर देता है, तो वापस बटन के कार्यान्वित परीक्षण</string>
+    <string name="im_b_an">- प्रतिक्रिया बटन के परीक्षण को लागू किया</string>
+    <string name="one_sec_pag">- टाइमर को ऑनस्वरक्लिक पर सेट करें ताकि जब आप उत्तर पर क्लिक करें, तो आप अगले प्रश्न पर फ़्लिप करने से पहले 1 सेकंड प्रतीक्षा करें</string>
+    <string name="st_sc_qr">1.मैं क्विजरेसल्ट का लेआउट शुरू करूंगा</string>
+    <string name="im_wi_fi">2.मैं इंटरनेट या वाई-फाई की उपलब्धता निर्धारित करने के कार्यों को लागू करता हूं</string>
+    <string name="re_q_l_ans">प्रश्नों के मिश्रण और उत्तर पत्रक में एम्बेड करने के साथ</string>
+    <string name="since">साथ </string>
+    <string name="before"> इससे पहले </string>
+    <string name="gone_to_dream">सो गया</string>
+    <string name="wh_dr_q">आपने क्या सपना देखा था ? (वैकल्पिक)</string>
+    <string name="list_ideas"> विचारों की अपनी सूची</string>
+    <string name="vis_im_idea">एक दृश्य छवि उस विचार को मजबूत करने का एक अच्छा तरीका है जो आया है</string>
+    <string name="by_cl_im_sh">जब आप कार्ड पर क्लिक करते हैं, तो चित्र पूर्ण आकार में खुलता है</string>
+    <string name="cl_ca_re_id">इस बटन पर क्लिक करके आप एक विचार लिख सकते हैं</string>
+    <string name="dream_record">नींद का रिकॉर्ड रखें</string>
+    <string name="history_empty">इतिहास खाली है</string>
+    <string name="new_event">नई घटना</string>
+    <string name="diplom_work">ग्रेजुएट काम</string>
+    <string name="phisology">मनोविज्ञान</string>
 </resources>
