--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -43,7 +43,6 @@
     <string name="share">Colore non selezionato</string>
     <string name="add_title">Digitare il testo</string>
     <string name="choose_image">Selezionare un\'immagine:</string>
-    <string name="attention">Attenzione!</string>
     <string name="cancel">Cancellazione</string>
     <string name="what_to_do">Cosa vorresti fare?</string>
     <string name="help_idea_add">Per aggiungere una nuova idea, fare clic su +</string>
@@ -260,7 +259,7 @@ scorri verso destra, puoi rimuovere un elemento dall\'elenco delle spese frequen
     <string name="flight_over_city">Volare sopra la tua città</string>
     <string name="my_dream_in_dream">Ho fatto un sogno in un sogno che era un sogno</string>
     <string name="congratulation">Congratularsi!</string>
-    <string name="level">\"Livello \"</string>
+    <string name="level">Livello </string>
     <string name="you_are_hello">Benvenuto</string>
     <string name="tool">Strumento</string>
     <string name="got_you_aim">Raggiungere i tuoi obiettivi</string>
@@ -275,13 +274,13 @@ scorri verso destra, puoi rimuovere un elemento dall\'elenco delle spese frequen
     <string name="fix_idea">Fissazione delle idee</string>
     <string name="lets_start">Cominciamo !</string>
     <string name="click_by_screen">Clicca sullo schermo</string>
-    <string name="before_start">\""Prima di iniziare, ti suggeriamo di familiarizzare con l'applicazione\"</string>
+    <string name="before_start">Prima di iniziare, ti suggeriamo di familiarizzare con l\'applicazione</string>
     <string name="two_tools">Qui ci sono due strumenti di navigazione</string>
     <string name="bottom_and_side">Inferiore e laterale</string>
     <string name="side_open_by_click">Laterale si apre cliccando sul Burger che si trova nell\'angolo in alto a sinistra</string>
     <string name="after_instruction">Dopo aver effettuato l\'accesso a ciascuna finestra, attendere l\'avvio del briefing</string>
     <string name="go">Andiamo !</string>
-    <string name="you_calendar">\"Il tuo calendario\"</string>
+    <string name="you_calendar">Il tuo calendario\"</string>
     <string name="show_day">Visualizza i giorni di aggiornamento per i prossimi 3 mesi</string>
     <string name="set_event_new_task">Pizzicando la data è possibile impostare un evento o una nuova attività in un determinato giorno della settimana</string>
     <string name="next_you_cards">Poi vanno le tue carte</string>
@@ -294,37 +293,70 @@ scorri verso destra, puoi rimuovere un elemento dall\'elenco delle spese frequen
     <string name="hold_card">\"Tieni premuto su una scheda dall\'elenco per aprire una finestra con le azioni\"</string>
     <string name="insert_button">\"Pulsante Aggiungi\"</string>
     <string name="create_new_category_click">Facendo clic su questo pulsante è possibile creare una nuova scheda specificando il nome della categoria e l\'icona</string>
-    <string name="under_everyday">\" Sotto ogni giorno si nasconde un elenco che può essere compilato\"</string>
+    <string name="under_everyday"> Sotto ogni giorno si nasconde un elenco che può essere compilato</string>
     <string name="cause_see">Per vedere cosa è previsto per un giorno o un altro clicca su di esso</string>
-    <string name="hold_task_action">\""Può impostare un'attività pianificata dall'elenco per richiamare una finestra con le azioni\"</string>
+    <string name="hold_task_action">Può impostare un\'attività pianificata dall\'elenco per richiamare una finestra con le azioni</string>
     <string name="click_here_button">Facendo clic su questo pulsante è possibile creare casi per un giorno specifico della settimana</string>
     <string name="planning_events">Il tuo elenco di eventi pianificati</string>
-    <string name="set_remind_by_wish">\" Facoltativamente, è possibile impostare un promemoria\"</string>
+    <string name="set_remind_by_wish"> Facoltativamente, è possibile impostare un promemoria</string>
     <string name="create_ev_date">Facendo clic su questo pulsante è possibile creare eventi in una data specifica</string>
     <string name="list_habit">La tua lista di abitudini che vuoi instillare in te stesso</string>
     <string name="in_left_day">A sinistra indica quanti giorni hai già fissato l\'abitudine</string>
     <string name="in_right_hold">\"A destra quanti giorni è necessario tenere\"</string>
-    <string name="click_by_habit">\""Cliccando sulla scheda è possibile contrassegnare l'abitudine per il giorno corrente e tenendo premuto sulla scheda è possibile richiamare una finestra con le azioni\"</string>
-    <string name="create_new_habit">\" Facendo clic su questo pulsante è possibile creare una nuova abitudine\"</string>
+    <string name="click_by_habit">Cliccando sulla scheda è possibile contrassegnare l\'abitudine per il giorno corrente e tenendo premuto sulla scheda è possibile richiamare una finestra con le azioni</string>
+    <string name="create_new_habit"> Facendo clic su questo pulsante è possibile creare una nuova abitudine</string>
     <string name="list_process">L\'elenco dei processi su cui è necessaria la concentrazione</string>
-    <string name="theroy_thousand_hour">\" Questa finestra si basa sulle teorie di 10.000 ore\"</string>
-    <string name="profession_thousand_hour">\" In cui si dice che per diventare un professionista in un certo campo, è necessario spendere circa 10 mila ore per studiarlo\"</string>
+    <string name="theroy_thousand_hour"> Questa finestra si basa sulle teorie di 10.000 ore</string>
+    <string name="profession_thousand_hour"> In cui si dice che per diventare un professionista in un certo campo, è necessario spendere circa 10 mila ore per studiarlo</string>
     <string name="work_stopwatch_timer">Facendo clic su questo pulsante è possibile creare un nuovo processo, lavorare con il timer o con il cronometro</string>
-    <string name="list_standup">\" La tua lista di stand-up\"</string>
+    <string name="list_standup"> La tua lista di stand-up</string>
     <string name="team_work">Questa finestra è basata sul sistema di comando</string>
-    <string name="plan_and_problem_share">\" Dove i membri del team creano quotidianamente un rapporto sullo stato di avanzamento e condividono i loro piani e le loro sfide\"</string>
+    <string name="plan_and_problem_share"> Dove i membri del team creano quotidianamente un rapporto sullo stato di avanzamento e condividono i loro piani e le loro sfide</string>
     <string name="good_system">Questo è un ottimo sistema per tenersi in forma</string>
-    <string name="good_friend_standup">\" Puoi chiedere a un buon amico di seguire gli stand-up\"</string>
-    <string name="share_fun_send">\" E li \'c\'e\' la funzione di condividere in modo da poter inviare\"</string>
-    <string name="create_new_standup">\" Facendo clic su questo pulsante è possibile creare un nuovo stand\"</string>
+    <string name="good_friend_standup"> Puoi chiedere a un buon amico di seguire gli stand-up</string>
+    <string name="share_fun_send"> E li \'c\'e\' la funzione di condividere in modo da poter inviare</string>
+    <string name="create_new_standup"> Facendo clic su questo pulsante è possibile creare un nuovo stand</string>
     <string name="list_dream">Ваш список где собираются ваши записи связанные со сном</string>
-    <string name="up_slept_hour">\" In alto indica quante ore hai dormito per il giorno specificato\"</string>
+    <string name="up_slept_hour"> In alto indica quante ore hai dormito per il giorno specificato</string>
     <string name="next_time_date">Più lontano da quanti a quanti e la data</string>
-    <string name="course_record_dream">\"Cliccando sulla carta puoi vedere cosa sognava quel giorno, ovviamente, se lo hai scritto\"</string>
+    <string name="course_record_dream">Cliccando sulla carta puoi vedere cosa sognava quel giorno, ovviamente, se lo hai scritto</string>
     <string name="create_new_record">Facendo clic su questo pulsante è possibile creare una nuova voce</string>
-    <string name="folow_finance_window">\" Una finestra per tenere traccia delle tue finanze\"</string>
-    <string name="new_appear_open">\" Nella parte superiore della scheda con suggerimenti relativi alle finanze, una nuova appare ogni volta che si apre questa finestra\"</string>
-    <string name="main_fun_in_ex">\""Le funzioni principali sono i pulsanti entrate e uscite\"</string>
-    <string name="template_work">\"C\'è anche un elenco di spese modello cliccando su un elemento è possibile lavorare con esso\"</string>
-    <string name="history_button_ex_te">\"E, naturalmente, il pulsante della storia in cui viene preso in considerazione tutto, oltre alle spese di modello\"</string>
+    <string name="folow_finance_window"> Una finestra per tenere traccia delle tue finanze</string>
+    <string name="new_appear_open"> Nella parte superiore della scheda con suggerimenti relativi alle finanze, una nuova appare ogni volta che si apre questa finestra</string>
+    <string name="main_fun_in_ex">Le funzioni principali sono i pulsanti entrate e uscite</string>
+    <string name="template_work">C\'è anche un elenco di spese modello cliccando su un elemento è possibile lavorare con esso</string>
+    <string name="history_button_ex_te">E, naturalmente, il pulsante della storia in cui viene preso in considerazione tutto, oltre alle spese di modello</string>
+    <string name="template_expensive">Spese modello</string>
+    <string name="choose_icon">Selezione delle icone</string>
+    <string name="hours"> Orologi</string>
+    <string name="minut"> Minuti</string>
+    <string name="rewrite_code">1.Riscritto e riletto il codice dalla lezione</string>
+    <string name="watch_stream">2.Guarda lo stream</string>
+    <string name="write_screen_se_q">3.Scritto il layout per Settings e per il Quiz</string>
+    <string name="create_h_st_dao">4. In HistoryStorage creato metodi per HistoryDao</string>
+    <string name="in_dao_delete">5.In History dat ha scritto il metodo delete All sotto l\'Annotazione @Delete</string>
+    <string name="reread_code_q">1.Rileggo il codice QuizApp per una maggiore comprensione</string>
+    <string name="impl_f_fi">2.Passare alla realizzazione dei punti 4 e 5</string>
+    <string name="hard_fa_da">C\'erano difficoltà con il riempimento di History con dati falsi</string>
+    <string name="im_sh_pr">- Implementato la visualizzazione dei progressi</string>
+    <string name="im_sh_ca">- Implementato visualizzazione Categoria</string>
+    <string name="im_ba_f_a">- Implementato il pulsante di lavoro indietro se la prima pagina chiude L\'attività</string>
+    <string name="im_b_an">- Implementato pulsanti di lavoro sulla risposta</string>
+    <string name="one_sec_pag">-Impostare il timer per onAnswerClick modo che quando si preme sulla risposta aspettato 1 secondo prima di voltare alla seguente domanda</string>
+    <string name="st_sc_qr">1.Inizierò il layout di QuizResult</string>
+    <string name="im_wi_fi">2.Implementare la funzione di determinare la presenza di Internet o WI-FI</string>
+    <string name="re_q_l_ans">Con domande mescolate e annidate in un foglio di risposta</string>
+    <string name="since"> a partire dal </string>
+    <string name="before"> Fino </string>
+    <string name="gone_to_dream">È andato a dormire</string>
+    <string name="wh_dr_q">Cos\'hai sognato ? (Non necessariamente)</string>
+    <string name="list_ideas"> La tua lista di idee</string>
+    <string name="vis_im_idea">L\'immagine visiva è un buon modo per consolidare l\'idea che è venuta</string>
+    <string name="by_cl_im_sh">Quando si fa clic su una carta, l\'immagine si apre a grandezza naturale</string>
+    <string name="cl_ca_re_id">Cliccando su questo pulsante è possibile annotare l\'idea</string>
+    <string name="dream_record">Tenere un registro del sonno</string>
+    <string name="history_empty">La storia è vuota</string>
+    <string name="new_event">Nuovo evento</string>
+    <string name="diplom_work">Tesi di laurea</string>
+    <string name="phisology">Psicologia</string>
 </resources>
