--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -43,7 +43,6 @@
     <string name="share">共有するには</string>
     <string name="add_title">テキストを入力する</string>
     <string name="choose_image">画像を選択する:</string>
-    <string name="attention">アテンション！</string>
     <string name="cancel">キャンセル</string>
     <string name="what_to_do">何をしたいですか？</string>
     <string name="help_idea_add">新しいアイデアを追加するには</string>
@@ -259,7 +258,7 @@
     <string name="flight_over_city">あなたの街の上を飛んで</string>
     <string name="my_dream_in_dream">私は夢だった夢の中で夢を持っていた</string>
     <string name="congratulation">お祝い!</string>
-    <string name="level">\"レベル \"</string>
+    <string name="level">レベル </string>
     <string name="you_are_hello">あなたは歓迎されています</string>
     <string name="tool">ツール</string>
     <string name="got_you_aim">あなたの目標を達成する</string>
@@ -274,13 +273,13 @@
     <string name="fix_idea">アイデアを修正する</string>
     <string name="lets_start">始めましょう！</string>
     <string name="click_by_screen">画面をクリックします</string>
-    <string name="before_start">\"あなたが始める前に、我々はあなたがアプリケーションに慣れることをお勧めします\"</string>
+    <string name="before_start">あなたが始める前に、我々はあなたがアプリケーションに慣れることをお勧めします</string>
     <string name="two_tools">ここには2つのナビゲーションツールがあります</string>
     <string name="bottom_and_side">より低くおよび側面</string>
     <string name="side_open_by_click">サイドワンは、左上隅に位置しているハンバーガーをクリックすることで開きます</string>
     <string name="after_instruction">各ウィンドウに切り替えた後、ブリーフィングが開始するのを待ちます</string>
     <string name="go">行く !</string>
-    <string name="you_calendar">\"あなたのカレンダー\"</string>
+    <string name="you_calendar">あなたのカレンダー</string>
     <string name="show_day">次の3か月の更新日を表示します</string>
     <string name="set_event_new_task">日付を押すことで、特定の曜日にイベントや新しいタスクを設定することができます</string>
     <string name="next_you_cards">次はあなたのカードを来る</string>
@@ -289,41 +288,76 @@
     <string name="show_profile">サイドバーを開くことで、あなたのプロフィールを見ることができます</string>
     <string name="avater_name">アバター、名前と現在のレベルは、アバターと名前を設定するために、それらをクリックしてください</string>
     <string name="lvlup_some_action">習慣、タスクなどの実行などの特定のアクションのレベルが増加します</string>
-    <string name="inside_cards_record">\"あなたがノートやタスクを書くことができ、その中のカード\"</string>
-    <string name="hold_card">\"アクションでウィンドウを開くには、リストからカードをクリックします\"</string>
-    <string name="insert_button">\"追加ボタン\"</string>
+    <string name="inside_cards_record">あなたがノートやタスクを書くことができ、その中のカード</string>
+    <string name="hold_card">アクションでウィンドウを開くには、リストからカードをクリックします</string>
+    <string name="insert_button">追加ボタン</string>
     <string name="create_new_category_click">このボタンをクリックすると、カテゴリ名とアイコンを指定して新しいカードを作成できます</string>
-    <string name="under_everyday">\" 記入することができ、毎日の下に隠されたリストがあります\"</string>
+    <string name="under_everyday"> 記入することができ、毎日の下に隠されたリストがあります</string>
     <string name="cause_see">特定の日に何が計画されているかを確認するには、それをクリックします</string>
-    <string name="hold_task_action">\""リストからスケジュールされたタスクを設定して、アクションのあるウィンドウを開くことができます\"</string>
+    <string name="hold_task_action">リストからスケジュールされたタスクを設定して、アクションのあるウィンドウを開くことができます</string>
     <string name="click_here_button">このボタンをクリックすると、特定の曜日のケースを作成できます</string>
     <string name="planning_events">予定されているイベントのリスト</string>
-    <string name="set_remind_by_wish">\" 必要に応じて、リマインダーを設定できます\"</string>
+    <string name="set_remind_by_wish"> 必要に応じて、リマインダーを設定できます</string>
     <string name="create_ev_date">このボタンをクリックすると、特定の日付のイベントを作成できます</string>
     <string name="list_habit">あなたが自分自身に浸透したい習慣のあなたのリスト</string>
     <string name="in_left_day">左側には、すでに習慣を修正した日数が示されています</string>
-    <string name="in_right_hold">\"右側には、何日あなたが保持する必要がありますか\"</string>
-    <string name="click_by_habit">\""カードをクリックすると、現在の日の習慣の完了をマークすることができ、カードを押すと、アクションでウィンドウを開くことができます\"</string>
-    <string name="create_new_habit">\" このボタンをクリックすると、新しい習慣を作成できます\"</string>
+    <string name="in_right_hold">右側には、何日あなたが保持する必要がありますか</string>
+    <string name="click_by_habit">カードをクリックすると、現在の日の習慣の完了をマークすることができ、カードを押すと、アクションでウィンドウを開くことができます</string>
+    <string name="create_new_habit"> このボタンをクリックすると、新しい習慣を作成できます</string>
     <string name="list_process">集中力を必要とするプロセスのリスト</string>
-    <string name="theroy_thousand_hour">\" このウィンドウは、10,000時間の理論に基づいて作成されます\"</string>
-    <string name="profession_thousand_hour">\" 特定の分野の専門家になるためには、それを勉強するために約1万時間を費やす必要があります\"</string>
+    <string name="theroy_thousand_hour"> このウィンドウは、10,000時間の理論に基づいて作成されます</string>
+    <string name="profession_thousand_hour"> 特定の分野の専門家になるためには、それを勉強するために約1万時間を費やす必要があります</string>
     <string name="work_stopwatch_timer">このボタンをクリックすると、新しいプロセスを作成したり、タイマーやストップウォッチで作業したりすることができます</string>
-    <string name="list_standup">\" スタンドアップのあなたのリスト\"</string>
+    <string name="list_standup"> スタンドアップのあなたのリスト</string>
     <string name="team_work">このウィンドウは、チームワークシステムに基づいています</string>
-    <string name="plan_and_problem_share">\" チームメンバーが毎日の進捗レポートを作成し、計画や問題を共有する場所\"</string>
+    <string name="plan_and_problem_share"> チームメンバーが毎日の進捗レポートを作成し、計画や問題を共有する場所</string>
     <string name="good_system">これは良い形で自分自身を維持するために非常に良いシステムです</string>
-    <string name="good_friend_standup">\" あなたは、スタンドアップのコンパイルに従うために良い友人に依頼することができます\"</string>
-    <string name="share_fun_send">\" そして、あなたがそれを送ることができるようにちょうど共有機能があります\"</string>
-    <string name="create_new_standup">\" このボタンをクリックすると、新しいスタンドアップを作成できます\"</string>
+    <string name="good_friend_standup"> あなたは、スタンドアップのコンパイルに従うために良い友人に依頼することができます</string>
+    <string name="share_fun_send"> そして、あなたがそれを送ることができるようにちょうど共有機能があります</string>
+    <string name="create_new_standup"> このボタンをクリックすると、新しいスタンドアップを作成できます</string>
     <string name="list_dream">あなたの睡眠関連の記録が収集されているあなたのリスト</string>
-    <string name="up_slept_hour">\" 一番上には、指定された日の間に眠った時間の数が表示されます\"</string>
+    <string name="up_slept_hour"> 一番上には、指定された日の間に眠った時間の数が表示されます</string>
     <string name="next_time_date">その後、どのように多くのからどのように多くの日付に</string>
-    <string name="course_record_dream">\"カードをクリックすると、あなたがそれを記録した場合、あなたはもちろん、あなたがその日夢見ていたものを見ることができます\"</string>
+    <string name="course_record_dream">カードをクリックすると、あなたがそれを記録した場合、あなたはもちろん、あなたがその日夢見ていたものを見ることができます</string>
     <string name="create_new_record">このボタンをクリックすると、新しいエントリを作成できます</string>
-    <string name="folow_finance_window">\" あなたの財政を追跡するためのウィンドウ\"</string>
-    <string name="new_appear_open">\" 上部には金融関連のヒントを持つカードがあり、このウィンドウを開くたびに新しいカードが表示されます\"</string>
-    <string name="main_fun_in_ex">\"主な機能は、収益と費用のボタンによって実行されます\"</string>
-    <string name="template_work">\"あなたはそれで作業することができます項目をクリックすることで、テンプレートの費用のリストもあります\"</string>
-    <string name="history_button_ex_te">\"そしてもちろん、すべてがテンプレートの費用に加えて考慮されている履歴ボタン、\"</string>
+    <string name="folow_finance_window"> あなたの財政を追跡するためのウィンドウ</string>
+    <string name="new_appear_open"> 上部には金融関連のヒントを持つカードがあり、このウィンドウを開くたびに新しいカードが表示されます</string>
+    <string name="main_fun_in_ex">主な機能は、収益と費用のボタンによって実行されます</string>
+    <string name="template_work">あなたはそれで作業することができます項目をクリックすることで、テンプレートの費用のリストもあります</string>
+    <string name="history_button_ex_te">そしてもちろん、すべてがテンプレートの費用に加えて考慮されている履歴ボタン、</string>
+    <string name="template_expensive">テンプレート費用</string>
+    <string name="choose_icon">アイコンの選択</string>
+    <string name="hours"> 時間</string>
+    <string name="minut"> 分</string>
+    <string name="rewrite_code">1. レッスンからコードを書き直して再読み込みします</string>
+    <string name="watch_stream">2. ストリームを見た</string>
+    <string name="write_screen_se_q">3. 設定とクイズのレイアウトを書いた</string>
+    <string name="create_h_st_dao">4.in HistoryStorage はH istoryDao のためのメソッドを作成しました</string>
+    <string name="in_dao_delete">5. History Dat では、@delete 注釈の下に delete All メソッドを記述しました</string>
+    <string name="reread_code_q">\"1. 私はより多くの理解のためにQuizAppコードを再読します\"</string>
+    <string name="impl_f_fi">2. 私は段落4と5の実装に進みます</string>
+    <string name="hard_fa_da">偽のデータで履歴を埋めることに困難がありました</string>
+    <string name="im_sh_pr">-進捗表示を実装</string>
+    <string name="im_sh_ca">-実装されたカテゴリマッピング</string>
+    <string name="im_ba_f_a">-最初のページがアクティビティを閉じた場合、戻るボタンのテストを実装しました</string>
+    <string name="im_b_an">-応答ボタンのテストを実装しました</string>
+    <string name="one_sec_pag">-あなたが答えをクリックしたとき、あなたは次の質問に反転する前に1秒待つようにonAnswerClickにタイマーを設定します</string>
+    <string name="st_sc_qr">\"1.QuizResult のレイアウトを開始します\"</string>
+    <string name="im_wi_fi">2.私は、インターネットやWI-FIの可用性を決定する機能を実装しています</string>
+    <string name="re_q_l_ans">質問の混合とアンサーシートへの埋め込み</string>
+    <string name="since">から </string>
+    <string name="before"> 前に </string>
+    <string name="gone_to_dream">ゴーン-トゥ-スリープ</string>
+    <string name="wh_dr_q">あなたは何を夢見ていましたか？ （オプション）</string>
+    <string name="list_ideas"> アイデアのあなたのリスト</string>
+    <string name="vis_im_idea">視覚的なイメージは、来ているアイデアを統合するための良い方法です</string>
+    <string name="by_cl_im_sh">あなたがカードをクリックすると、画像はフルサイズで開きます</string>
+    <string name="cl_ca_re_id">このボタンをクリックすると、アイデアを書き留めることができます</string>
+    <string name="dream_record">睡眠の記録を保つ</string>
+    <string name="history_empty">歴史は空です</string>
+    <string name="read">読む</string>
+    <string name="new_event">新しいイベント</string>
+    <string name="diplom_work">大学院の仕事</string>
+    <string name="phisology">心理学</string>
+
 </resources>
