--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -260,7 +260,7 @@
     <string name="flight_over_city">당신의 도시를 비행</string>
     <string name="my_dream_in_dream">꿈에 꿈에 꿈에 꿈에 꿈에 꿈에 꿈에 꿈에 꿈에 꿈에 꿈에 꿈에</string>
     <string name="congratulation">축하!</string>
-    <string name="level">\"레벨 \"</string>
+    <string name="level">레벨 </string>
     <string name="you_are_hello">당신은 환영받습니다</string>
     <string name="tool">이 도구</string>
     <string name="got_you_aim">목표 달성</string>
@@ -290,41 +290,74 @@
     <string name="show_profile">사이드 바를 열면 프로필을 볼 수 있습니다</string>
     <string name="avater_name">아바타,이름과 현재 수준,아바타와 이름을 설정하기 위해,그들을 클릭</string>
     <string name="lvlup_some_action">수행 습관,작업 등과 같은 특정 작업에 대한 레벨이 증가합니다</string>
-    <string name="inside_cards_record">\"메모 나 작업을 쓸 수있는 카드\"</string>
-    <string name="hold_card">\"목록에서 카드를 클릭하면 작업이있는 창이 열립니다\"</string>
-    <string name="insert_button">\추가"버튼\</string>
+    <string name="inside_cards_record">메모 나 작업을 쓸 수있는 카드</string>
+    <string name="hold_card">목록에서 카드를 클릭하면 작업이있는 창이 열립니다</string>
+    <string name="insert_button">추가"버튼</string>
     <string name="create_new_category_click">이 버튼을 클릭하면 카테고리 이름과 아이콘을 지정하여 새 카드를 만들 수 있습니다</string>
-    <string name="under_everyday">\" 작성 될 수있는 매일 아래에 숨겨진 목록이 있습니다\"</string>
+    <string name="under_everyday"> 작성 될 수있는 매일 아래에 숨겨진 목록이 있습니다</string>
     <string name="cause_see">특정 날에 계획되어있는 것을 보려면 클릭하십시오</string>
-    <string name="hold_task_action">\"목록에서 예약 된 작업을 설정하여 작업이있는 창을 열 수 있습니다\"</string>
+    <string name="hold_task_action">목록에서 예약 된 작업을 설정하여 작업이있는 창을 열 수 있습니다</string>
     <string name="click_here_button">이 버튼을 클릭하면 특정 요일에 대한 사례를 만들 수 있습니다</string>
     <string name="planning_events">예정된 이벤트 목록</string>
-    <string name="set_remind_by_wish">\" 선택적으로 미리 알림을 설정할 수 있습니다\"</string>
+    <string name="set_remind_by_wish"> 선택적으로 미리 알림을 설정할 수 있습니다</string>
     <string name="create_ev_date">이 버튼을 클릭하면 특정 날짜에 대한 이벤트를 만들 수 있습니다</string>
     <string name="list_habit">자신에게 심어주고 싶은 습관 목록</string>
     <string name="in_left_day">왼쪽에는 이미 습관을 고친 며칠이 표시됩니다</string>
-    <string name="in_right_hold">\"오른쪽에는 몇 일 동안 기다려야합니까\"</string>
-    <string name="click_by_habit">\""를 클릭하여 카드에 표시할 수 있습니다 완료하는 습관에 대한 현재 날짜와 누름으로써 할 수 있습니 창문을 열과 함께 작업\"</string>
-    <string name="create_new_habit">\" 이 버튼을 클릭하면 새로운 습관을 만들 수 있습니다\"</string>
+    <string name="in_right_hold">오른쪽에는 몇 일 동안 기다려야합니까</string>
+    <string name="click_by_habit">를 클릭하여 카드에 표시할 수 있습니다 완료하는 습관에 대한 현재 날짜와 누름으로써 할 수 있습니 창문을 열과 함께 작업</string>
+    <string name="create_new_habit"> 이 버튼을 클릭하면 새로운 습관을 만들 수 있습니다</string>
     <string name="list_process">집중력이 필요한 프로세스 목록</string>
-    <string name="theroy_thousand_hour">\" 이 창은 10,000 시간의 이론을 기반으로 만들어집니다\"</string>
-    <string name="profession_thousand_hour">\" 어느 특정 분야의 전문가가되기 위해,당신은 그것을 공부하는 데 약 1 만 시간을 소비 할 필요가 있다고 말합니다\"</string>
+    <string name="theroy_thousand_hour"> 이 창은 10,000 시간의 이론을 기반으로 만들어집니다</string>
+    <string name="profession_thousand_hour"> 어느 특정 분야의 전문가가되기 위해,당신은 그것을 공부하는 데 약 1 만 시간을 소비 할 필요가 있다고 말합니다</string>
     <string name="work_stopwatch_timer">이 버튼을 클릭하면 새 프로세스를 만들거나 타이머 또는 스톱워치로 작업 할 수 있습니다</string>
-    <string name="list_standup">\" 귀하의 스탠드 업 목록\"</string>
+    <string name="list_standup"> 귀하의 스탠드 업 목록</string>
     <string name="team_work">이 창은 팀 작업 시스템을 기반으로합니다</string>
-    <string name="plan_and_problem_share">\"팀 구성원이 일일 진행 보고서를 작성하고 계획과 문제를 공유하는 곳\"</string>
+    <string name="plan_and_problem_share">팀 구성원이 일일 진행 보고서를 작성하고 계획과 문제를 공유하는 곳</string>
     <string name="good_system">이것은 자신을 좋은 모양으로 유지하는 아주 좋은 시스템입니다</string>
-    <string name="good_friend_standup">\" 당신은 스탠드 업의 편집을 따라 좋은 친구를 요청할 수 있습니다\"</string>
-    <string name="share_fun_send">\" 그리고 당신이 그것을 보낼 수 있도록 단지 공유 기능이 있습니다\"</string>
-    <string name="create_new_standup">\" 이 버튼을 클릭하면 새 스탠드 업을 만들 수 있습니다\"</string>
+    <string name="good_friend_standup"> 당신은 스탠드 업의 편집을 따라 좋은 친구를 요청할 수 있습니다</string>
+    <string name="share_fun_send"> 그리고 당신이 그것을 보낼 수 있도록 단지 공유 기능이 있습니다</string>
+    <string name="create_new_standup"> 이 버튼을 클릭하면 새 스탠드 업을 만들 수 있습니다</string>
     <string name="list_dream">수면 관련 기록이 수집되는 귀하의 목록</string>
-    <string name="up_slept_hour">\" 상단에는 지정된 하루 동안 얼마나 많은 시간을 잤는지 보여줍니다\"</string>
+    <string name="up_slept_hour"> 상단에는 지정된 하루 동안 얼마나 많은 시간을 잤는지 보여줍니다</string>
     <string name="next_time_date">그런 다음 얼마나 많은에서 얼마나 많은과 날짜</string>
-    <string name="course_record_dream">\"카드를 클릭하면 그날 꿈꿔 왔던 것을 볼 수 있습니다,물론,당신이 그것을 기록한다면\"</string>
+    <string name="course_record_dream">카드를 클릭하면 그날 꿈꿔 왔던 것을 볼 수 있습니다,물론,당신이 그것을 기록한다면</string>
     <string name="create_new_record">이 버튼을 클릭하면 새 항목을 만들 수 있습니다</string>
-    <string name="folow_finance_window">\" 당신의 재정을 추적하기위한 창\"</string>
-    <string name="new_appear_open">\" 맨 위에는 금융 관련 팁이있는 카드가 있습니다.이 창을 열 때마다 새로운 카드가 나타납니다\"</string>
-    <string name="main_fun_in_ex">\"주요 기능은 수입 및 지출 버튼에 의해 수행됩니다\"</string>
-    <string name="template_work">\"당신이 그것으로 작업 할 수있는 항목을 클릭하여 템플릿 비용의 목록도 있습니다\"</string>
-    <string name="history_button_ex_te">\"그리고 물론 템플릿 비용 외에도 모든 것이 고려되는 기록 버튼\"</string>
+    <string name="folow_finance_window"> 당신의 재정을 추적하기위한 창</string>
+    <string name="new_appear_open"> 맨 위에는 금융 관련 팁이있는 카드가 있습니다.이 창을 열 때마다 새로운 카드가 나타납니다</string>
+    <string name="main_fun_in_ex">주요 기능은 수입 및 지출 버튼에 의해 수행됩니다</string>
+    <string name="template_work">당신이 그것으로 작업 할 수있는 항목을 클릭하여 템플릿 비용의 목록도 있습니다</string>
+    <string name="history_button_ex_te">그리고 물론 템플릿 비용 외에도 모든 것이 고려되는 기록 버튼</string>
+    <string name="template_expensive">템플릿 비용</string>
+    <string name="choose_icon">아이콘 선택</string>
+    <string name="hours"> 시간</string>
+    <string name="minut"> 분</string>
+    <string name="rewrite_code">1. 공과에서 코드를 다시 작성하고 다시 읽으십시오</string>
+    <string name="watch_stream">2. 스트림을 보았다</string>
+    <string name="write_screen_se_q">3. 설정 및 퀴즈 용 레이아웃을 작성했습니다</string>
+    <string name="create_h_st_dao">4. HistoryStorage 에서 HistoryDao 에 대한 방법을 만들었습니다</string>
+    <string name="in_dao_delete">5. History dat 에서@delete 주석 아래에 delete All 메소드를 작성했습니다</string>
+    <string name="reread_code_q">1. 더 많은 이해를 위해 QuizApp 코드를 다시 읽겠습니다</string>
+    <string name="impl_f_fi">2. 나는 4 항과 5 항의 구현을 진행할 것이다</string>
+    <string name="hard_fa_da">가짜 데이터로 역사를 채우는 데 어려움이있었습니다</string>
+    <string name="im_sh_pr">-구현 진행 표시</string>
+    <string name="im_sh_ca">-구현 된 카테고리 매핑</string>
+    <string name="im_ba_f_a">-첫 번째 페이지가 활동을 닫으면 뒤로 버튼의 구현 테스트</string>
+    <string name="im_b_an">-응답 버튼의 테스트를 구현</string>
+    <string name="one_sec_pag">-Onanswerclick 에 타이머를 설정 그래서 당신은 대답을 클릭 할 때,당신은 다음 질문으로 뒤집기 전에 1 초 기다립니다</string>
+    <string name="st_sc_qr">1.나는 QuizResult 의 레이아웃을 시작합니다</string>
+    <string name="im_wi_fi">2.인터넷 또는 WI-FI 의 가용성을 결정하는 기능을 구현합니다</string>
+    <string name="re_q_l_ans">질문의 혼합 및 답변 시트에 포함과 함께</string>
+    <string name="since">와 함께 </string>
+    <string name="before"> 전에 </string>
+    <string name="gone_to_dream">\"자러 갔다\"</string>
+    <string name="wh_dr_q">당신은 무엇을 꿈꿨습니까? ((선택 사항)</string>
+    <string name="list_ideas"> 귀하의 아이디어 목록</string>
+    <string name="vis_im_idea">시각적 이미지는 온 아이디어를 통합하는 좋은 방법입니다</string>
+    <string name="by_cl_im_sh">카드를 클릭하면 그림이 전체 크기로 열립니다</string>
+    <string name="cl_ca_re_id">이 버튼을 클릭하면 아이디어를 적어 둘 수 있습니다</string>
+    <string name="dream_record">수면 기록 유지</string>
+    <string name="history_empty">역사는 비어 있습니다</string>
+    <string name="new_event">새로운 이벤트</string>
+    <string name="diplom_work">대학원 작품</string>
+    <string name="phisology">심리학</string>
 </resources>
