--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -44,7 +44,6 @@
     <string name="share">Compartilhar isso</string>
     <string name="add_title">Digite o texto</string>
     <string name="choose_image">Escolha uma figura: </string>
-    <string name="attention">Atenção!</string>
     <string name="cancel">Cancelamento</string>
     <string name="what_to_do">O que você gostaria de fazer?</string>
     <string name="help_idea_add">Para adicionar uma nova ideia, clique em +</string>
@@ -261,7 +260,7 @@ deslizando para a direita, você pode remover um item da lista de gastos frequen
     <string name="flight_over_city">Voando sobre sua cidade</string>
     <string name="my_dream_in_dream">Eu tive um sonho em um sonho que era um sonho</string>
     <string name="congratulation">Felicitar!</string>
-    <string name="level">\"Nível \"</string>
+    <string name="level">Nível </string>
     <string name="you_are_hello">Bem-vindo</string>
     <string name="tool">Ferramenta</string>
     <string name="got_you_aim">Alcançar seus objetivos</string>
@@ -276,13 +275,13 @@ deslizando para a direita, você pode remover um item da lista de gastos frequen
     <string name="fix_idea">Fixando ideias</string>
     <string name="lets_start">Vamos começar !</string>
     <string name="click_by_screen">Clique na tela</string>
-    <string name="before_start">\"Antes de começar, sugerimos que você se familiarize com o aplicativo\"</string>
+    <string name="before_start">Antes de começar, sugerimos que você se familiarize com o aplicativo</string>
     <string name="two_tools">Existem duas ferramentas de navegação</string>
     <string name="bottom_and_side">Inferior e lateral</string>
     <string name="side_open_by_click">O lado é aberto clicando no hambúrguer que está localizado no canto superior esquerdo</string>
     <string name="after_instruction">Depois de mudar para cada uma das janelas, aguarde o início do instructable</string>
     <string name="go">Ir !</string>
-    <string name="you_calendar">\"Seu calendário\"</string>
+    <string name="you_calendar">Seu calendário</string>
     <string name="show_day">Exibe os dias atualizados para os próximos 3 meses</string>
     <string name="set_event_new_task">Pressionando a data, você pode definir um evento ou uma nova tarefa em um determinado dia da semana</string>
     <string name="next_you_cards">Então vá seus cartões</string>
@@ -291,41 +290,74 @@ deslizando para a direita, você pode remover um item da lista de gastos frequen
     <string name="show_profile">Ao abrir a barra lateral, você pode ver seu perfil</string>
     <string name="avater_name">Avatar, nome e nível atual, para definir o avatar e nome clique sobre eles</string>
     <string name="lvlup_some_action">O nível aumenta para certas ações, tais como a realização de hábitos, tarefas e afins</string>
-    <string name="inside_cards_record">\"Cartões dentro dos quais você pode gravar notas ou tarefas\"</string>
-    <string name="hold_card">\"Aperte o cartão da lista para abrir a janela com ações\"</string>
-    <string name="insert_button">\"Botão Adicionar\"</string>
+    <string name="inside_cards_record">Cartões dentro dos quais você pode gravar notas ou tarefas</string>
+    <string name="hold_card">Aperte o cartão da lista para abrir a janela com ações</string>
+    <string name="insert_button">Botão Adicionar</string>
     <string name="create_new_category_click">Ao clicar neste botão, você pode criar um novo cartão, especificando o nome da categoria e o ícone</string>
-    <string name="under_everyday">\" Sob todos os dias, há uma lista que pode ser preenchida\"</string>
+    <string name="under_everyday"> Sob todos os dias, há uma lista que pode ser preenchida</string>
     <string name="cause_see">Para ver o que está planejado para um determinado dia, clique nele</string>
-    <string name="hold_task_action">\""Você pode definir uma tarefa agendada na lista para abrir uma janela com ações\"</string>
+    <string name="hold_task_action">Você pode definir uma tarefa agendada na lista para abrir uma janela com ações</string>
     <string name="click_here_button">Ao clicar neste botão, você pode criar casos para um determinado dia da semana</string>
     <string name="planning_events">Sua lista de eventos agendados</string>
-    <string name="set_remind_by_wish">\" Opcionalmente, você pode definir um lembrete\"</string>
+    <string name="set_remind_by_wish"> Opcionalmente, você pode definir um lembrete</string>
     <string name="create_ev_date">Ao clicar neste botão você pode criar eventos em uma data específica</string>
     <string name="list_habit">Sua lista de hábitos que você quer incutir em si mesmo</string>
     <string name="in_left_day">À esquerda, indica quantos dias você já está consertando o hábito</string>
-    <string name="in_right_hold">\"À direita, quantos dias você precisa segurar\"</string>
-    <string name="click_by_habit">\""Ao clicar no cartão, você pode marcar o cumprimento do hábito do dia atual e, ao clicar no cartão, pode abrir uma janela com ações\"</string>
-    <string name="create_new_habit">\" Ao clicar neste botão, você pode criar um novo hábito\"</string>
+    <string name="in_right_hold">À direita, quantos dias você precisa segurar</string>
+    <string name="click_by_habit">Ao clicar no cartão, você pode marcar o cumprimento do hábito do dia atual e, ao clicar no cartão, pode abrir uma janela com ações</string>
+    <string name="create_new_habit"> Ao clicar neste botão, você pode criar um novo hábito</string>
     <string name="list_process">Sua lista de processos em que a concentração é necessária</string>
-    <string name="theroy_thousand_hour">\" Esta janela é criada com base nas teorias de 10.000 horas\"</string>
-    <string name="profession_thousand_hour">\" Que diz para se tornar um profissional em um determinado campo, você precisa gastar cerca de 10 mil horas estudando-o\"</string>
+    <string name="theroy_thousand_hour"> Esta janela é criada com base nas teorias de 10.000 horas</string>
+    <string name="profession_thousand_hour">\" Que diz para se tornar um profissional em um determinado campo, você precisa gastar cerca de 10 mil horas estudando-o</string>
     <string name="work_stopwatch_timer">Ao clicar neste botão, você pode criar um novo processo, trabalhar com um temporizador ou com um cronômetro</string>
-    <string name="list_standup">\" Sua lista de stand-ups\"</string>
+    <string name="list_standup"> Sua lista de stand-ups\"</string>
     <string name="team_work">Esta janela é baseada no sistema de trabalho em equipe</string>
-    <string name="plan_and_problem_share">\" Onde os membros da equipe criam um relatório de progresso diariamente e compartilham seus planos e preocupações\"</string>
+    <string name="plan_and_problem_share"> Onde os membros da equipe criam um relatório de progresso diariamente e compartilham seus planos e preocupações</string>
     <string name="good_system">É um sistema muito bom para se manter alerta</string>
-    <string name="good_friend_standup">\" Você pode pedir a um bom amigo que ele siga a compilação de estandartes\"</string>
-    <string name="share_fun_send">\" E há apenas uma função de compartilhamento para que você possa enviá-lo\"</string>
-    <string name="create_new_standup">\" Ao clicar neste botão, você pode criar um novo standup\"</string>
+    <string name="good_friend_standup"> Você pode pedir a um bom amigo que ele siga a compilação de estandartes</string>
+    <string name="share_fun_send"> E há apenas uma função de compartilhamento para que você possa enviá-lo</string>
+    <string name="create_new_standup"> Ao clicar neste botão, você pode criar um novo standup</string>
     <string name="list_dream">Sua lista é onde seus registros relacionados ao sono são coletados</string>
-    <string name="up_slept_hour">\" O topo indica quantas horas você dormiu no dia especificado\"</string>
+    <string name="up_slept_hour"> O topo indica quantas horas você dormiu no dia especificado</string>
     <string name="next_time_date">Mais longe de quantos para quantos e data</string>
-    <string name="course_record_dream">\"Ao clicar no cartão, você pode ver o que você sonhou naquele dia, é claro, se você o gravou\"</string>
+    <string name="course_record_dream">Ao clicar no cartão, você pode ver o que você sonhou naquele dia, é claro, se você o gravou</string>
     <string name="create_new_record">Ao clicar neste botão, você pode criar um novo registro</string>
-    <string name="folow_finance_window">\" Janela para acompanhar suas finanças\"</string>
-    <string name="new_appear_open">\" No topo, um cartão com dicas relacionadas a finanças, um novo aparece toda vez que você abre esta janela\"</string>
-    <string name="main_fun_in_ex">\""As principais funções executam os botões de receita e despesa\"</string>
-    <string name="template_work">\"Há também uma lista de despesas de modelo ao clicar em um item que você pode trabalhar com ele\"</string>
-    <string name="history_button_ex_te">\"E, claro, o botão Histórico onde tudo é levado em consideração, além dos custos do modelo\"</string>
+    <string name="folow_finance_window"> Janela para acompanhar suas finanças</string>
+    <string name="new_appear_open"> No topo, um cartão com dicas relacionadas a finanças, um novo aparece toda vez que você abre esta janela</string>
+    <string name="main_fun_in_ex">As principais funções executam os botões de receita e despesa</string>
+    <string name="template_work">Há também uma lista de despesas de modelo ao clicar em um item que você pode trabalhar com ele</string>
+    <string name="history_button_ex_te">E, claro, o botão Histórico onde tudo é levado em consideração, além dos custos do modelo</string>
+    <string name="template_expensive">Despesas padrão</string>
+    <string name="choose_icon">Seleção de ícones</string>
+    <string name="hours"> Relógio</string>
+    <string name="minut"> Minuto</string>
+    <string name="rewrite_code">1.Reescreveu e releu o código da lição</string>
+    <string name="watch_stream">2.Visto stream</string>
+    <string name="write_screen_se_q">3.Escreveu um layout para Settings e para Quiz</string>
+    <string name="create_h_st_dao">4. Em HistoryStorage criou métodos para HistoryDao</string>
+    <string name="in_dao_delete">5. No History, dat escreveu o método delete All sob a anotação @Delete</string>
+    <string name="reread_code_q">\"1.Relendo o código do QuizApp para obter mais informações\"</string>
+    <string name="impl_f_fi">2.Vou passar para a implementação dos pontos 4 e 5</string>
+    <string name="hard_fa_da">Houve dificuldades com o preenchimento do History com dados falsos</string>
+    <string name="im_sh_pr">- Implementou a exibição do progresso</string>
+    <string name="im_sh_ca">- Implementou a exibição da categoria</string>
+    <string name="im_ba_f_a">- Implementou o desenvolvimento do botão voltar se a primeira página fechar a atividade</string>
+    <string name="im_b_an">-Реализовал отработку кнопок на ответ</string>
+    <string name="one_sec_pag">- Definir o temporizador onAnswerClick para que quando você clica na resposta esperou 1 segundo antes de virar para a próxima pergunta</string>
+    <string name="st_sc_qr">1.Vou começar o layout do QuizResult</string>
+    <string name="im_wi_fi">2.Implementando funções para determinar a presença da Internet ou WI-FI</string>
+    <string name="re_q_l_ans">Com perguntas embaralhadas e aninhadas na folha answer</string>
+    <string name="since">Сom</string>
+    <string name="before"> Até </string>
+    <string name="gone_to_dream">Foi dormir</string>
+    <string name="wh_dr_q">O que sonhei ? (Opcional)</string>
+    <string name="list_ideas"> Sua lista de idéias</string>
+    <string name="vis_im_idea">A imagem visual é uma boa maneira de consolidar a ideia</string>
+    <string name="by_cl_im_sh">Ao clicar no cartão, a imagem é aberta em tamanho real</string>
+    <string name="cl_ca_re_id">Clicando neste botão você pode gravar a idéia</string>
+    <string name="dream_record">Manter registros do sono</string>
+    <string name="history_empty">A história está vazia</string>
+    <string name="new_event">Novo evento</string>
+    <string name="diplom_work">Tese</string>
+    <string name="phisology">Psicologia</string>
 </resources>
