--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,6 @@
     <string name="share">Поделиться</string>
     <string name="add_title">Введите текст</string>
     <string name="choose_image">Выберите картинку </string>
-    <string name="attention">Внимание!</string>
     <string name="cancel">Отмена</string>
     <string name="what_to_do">Что бы вы хотели сделать?</string>
     <string name="help_idea_add">Для добавления новой идеи нажмите на +</string>
@@ -53,9 +52,6 @@
     <string name="write_reviews">Написать отзыв</string>
     <string name="review_on_app">Отзыв на приложение Planner</string>
     <string name="done">Готово</string>
-    <string name="read">Читать</string>
-    <string name="date">Дата</string>
-    <string name="settings">Настройки</string>
     <string name="nav_open" translatable="false">Open</string>
     <string name="nav_close" translatable="false">Close</string>
     <string name="you_name">Ваше имя   ✍ </string>
@@ -196,7 +192,6 @@
     <string name="fill_field">Заполните поле</string>
     <string name="new_idea">Новая идея</string>
     <string name="new_category">Новая категория</string>
-    <string name="new_event">Новое событие</string>
     <string name="category_name">Название категории</string>
     <string name="new_habit">Новая привычка</string>
     <string name="what_done_yesterday">Что было выполнено за вчерашний день?</string>
@@ -272,7 +267,7 @@
     <string name="flight_over_city">Полёт над своим городом</string>
     <string name="my_dream_in_dream">Мне снилcя сон во сне который был сном</string>
     <string name="congratulation">Поздравляем!</string>
-    <string name="level">\"Уровень \"</string>
+    <string name="level">Уровень </string>
     <string name="you_are_hello">Вас приветствует</string>
     <string name="tool">Инструмент</string>
     <string name="got_you_aim">Достижения ваших целей</string>
@@ -287,13 +282,13 @@
     <string name="fix_idea">Фиксировать идеи</string>
     <string name="lets_start">Давайте начинать !</string>
     <string name="click_by_screen">Кликните по экрану</string>
-    <string name="before_start">\"Перед началом предлагаем познокомиться с приложением \"</string>
+    <string name="before_start">Перед началом предлагаем познакомиться с приложением </string>
     <string name="two_tools">Здесь имеются два инструмента навигации</string>
     <string name="bottom_and_side">Нижняя и боковая</string>
     <string name="side_open_by_click">Боковая открывается по нажатию на бургер которая находится в верхнем левом углу</string>
     <string name="after_instruction">После перехода на каждое из окон подождите запуск инструктажа</string>
     <string name="go">Поехали !</string>
-    <string name="you_calendar">\"Ваш календарь \"</string>
+    <string name="you_calendar">Ваш календарь </string>
     <string name="show_day">Отображает дни с обновлением на последующие 3 месяца</string>
     <string name="set_event_new_task">Зажатием на дату вы можете устанавливать событие или же новую задачу в определенный день недели</string>
     <string name="next_you_cards">Дальше идут ваши карточки</string>
@@ -302,41 +297,77 @@
     <string name="show_profile">Открыв боковую панель вы можете увидеть ваш профиль</string>
     <string name="avater_name">Аватарка,имя и текущий уровень,для того чтобы установить аватарку и имя кликните на них</string>
     <string name="lvlup_some_action">Уровень повышается за определённые действие такие выполнение привычек,задач и тому подобных</string>
-    <string name="inside_cards_record">\"Карточки внутри которых можно записывать заметки или же задачи \"</string>
-    <string name="hold_card">\"Зажмите на карточку из списка чтобы вызвать окно с действиями \"</string>
-    <string name="insert_button">\"Кнопка добавить \"</string>
+    <string name="inside_cards_record">Карточки внутри которых можно записывать заметки или же задачи </string>
+    <string name="hold_card">Зажмите на карточку из списка чтобы вызвать окно с действиями </string>
+    <string name="insert_button">Кнопка добавить </string>
     <string name="create_new_category_click">Нажав на эту кнопку вы можете создать новую карточку,указав название категории и иконку</string>
-    <string name="under_everyday">\" Под каждым днём прячется список который можно заполнить \"</string>
+    <string name="under_everyday"> Под каждым днём прячется список который можно заполнить </string>
     <string name="cause_see">Чтобы увидеть что запланировано на тот или иной день кликните на него</string>
-    <string name="hold_task_action">\"Можете зажать на запланнированную задачу из списка чтобы вызвать окно с действиями \"</string>
+    <string name="hold_task_action">Можете зажать на запланированную задачу из списка чтобы вызвать окно с действиями </string>
     <string name="click_here_button">Нажав на эту кнопку вы можете создать дела на определенный день недели</string>
     <string name="planning_events">Ваш список запланированных событий</string>
-    <string name="set_remind_by_wish">\" По желанию вы можете установить напоминание \"</string>
+    <string name="set_remind_by_wish"> По желанию вы можете установить напоминание </string>
     <string name="create_ev_date">Нажав на эту кнопку вы можете создать события на определенную дату</string>
     <string name="list_habit">Ваш список привычек которые вы хотите к себе привить</string>
     <string name="in_left_day">Слева указано сколько дней вы уже закрепляете привычку</string>
-    <string name="in_right_hold">\"Справа сколько дней нужно держаться \"</string>
-    <string name="click_by_habit">\"Кликнув на карточку вы можете отметить выполенение привычки за текущий день а зажав на карточу вы можете вызвать окно с действиями \"</string>
-    <string name="create_new_habit">\" Нажав на эту кнопку вы можете создать новую привычку \"</string>
+    <string name="in_right_hold">Справа сколько дней нужно держаться </string>
+    <string name="click_by_habit">Кликнув на карточку вы можете отметить выполнение  привычки за текущий день а зажав на карточку вы можете вызвать окно с действиями </string>
+    <string name="create_new_habit"> Нажав на эту кнопку вы можете создать новую привычку </string>
     <string name="list_process">Ваш список процессов на которых требуется концентрация</string>
-    <string name="theroy_thousand_hour">\" Это окно создана на основе теорий 10 000 часов\"</string>
-    <string name="profession_thousand_hour">\" В котором говорится чтобы стать профессионалом в определенной области, нужно потратить на её изучение около 10 тысяч часов  \"</string>
+    <string name="theroy_thousand_hour"> Это окно создана на основе теорий 10 000 часов</string>
+    <string name="profession_thousand_hour"> В котором говорится чтобы стать профессионалом в определенной области, нужно потратить на её изучение около 10 тысяч часов </string>
     <string name="work_stopwatch_timer">Нажав на эту кнопку вы можете создать новый процесс,поработать с таймером или же с секундомером</string>
-    <string name="list_standup">\" Ваш список стэндапов \"</string>
+    <string name="list_standup"> Ваш список стэндапов </string>
     <string name="team_work">Это окно создана на основе системы командной работы</string>
-    <string name="plan_and_problem_share">\" Где участники команды ежедневоно создают отчёт о проделанной работе и деляться со своми планами и проблемами  \"</string>
+    <string name="plan_and_problem_share"> Где участники команды ежедневно  создают отчёт о проделанной работе и делятся  со своими  планами и проблемами </string>
     <string name="good_system">Это очень хорошая система,чтоб держать себя в тонусе</string>
-    <string name="good_friend_standup">\" Вы можете попросить хорошого знакомого чтоб он следил за составлением стэндапов\"</string>
-    <string name="share_fun_send">\" И там как раз есть функция поделиться чтоб вы могли его отправить \"</string>
-    <string name="create_new_standup">\" Нажав на эту кнопку вы можете создать новый стэндап\"</string>
+    <string name="good_friend_standup"> Вы можете попросить хорошего знакомого чтоб он следил за составлением стэндапов</string>
+    <string name="share_fun_send"> И там как раз есть функция поделиться чтоб вы могли его отправить </string>
+    <string name="create_new_standup"> Нажав на эту кнопку вы можете создать новый стендап</string>
     <string name="list_dream">Ваш список где собираются ваши записи связанные со сном</string>
-    <string name="up_slept_hour">\" Вверху указано сколько часов вы проспали за указанный день\"</string>
+    <string name="up_slept_hour"> Вверху указано сколько часов вы проспали за указанный день\"</string>
     <string name="next_time_date">Дальше от скольки до скольки и дата</string>
-    <string name="course_record_dream">\"Кликнув на карточку вы можете посмотреть что снилось в тот день ,конечно же если вы его записали \"</string>
+    <string name="course_record_dream">Кликнув на карточку вы можете посмотреть что снилось в тот день ,конечно же если вы его записали </string>
     <string name="create_new_record">Нажав на эту кнопку вы можете создать новую запись</string>
-    <string name="folow_finance_window">\" Окно для слежения за ваши финансами \"</string>
-    <string name="new_appear_open">\" Вверху карточка с советами связанные с финансами,новый появляется каждый раз когда вы открываете это окно \"</string>
-    <string name="main_fun_in_ex">\"Основые функции выполняют кнопки Дохода и Расхода \"</string>
-    <string name="template_work">\"Также есть список шаблонных расходов по нажатию на элемент вы можете работать с ним \"</string>
-    <string name="history_button_ex_te">\"И конечно же кнопка истории где учитывается всё помимо шаблонных расходов \"</string>
+    <string name="folow_finance_window"> Окно для слежения за ваши финансами </string>
+    <string name="new_appear_open">Вверху карточка с советами связанные с финансами,новый появляется каждый раз когда вы открываете это окно </string>
+    <string name="main_fun_in_ex">Основные  функции выполняют кнопки Дохода и Расхода \"</string>
+    <string name="template_work">Также есть список шаблонных расходов по нажатию на элемент вы можете работать с ним \"</string>
+    <string name="history_button_ex_te">И конечно же кнопка истории где учитывается всё помимо шаблонных расходов </string>
+    <string name="template_expensive">Шаблонные расходы</string>
+    <string name="choose_icon">Выбор иконки</string>
+    <string name="hours"> Часов</string>
+    <string name="minut"> Минут</string>
+    <string name="rewrite_code">1.Переписал и перечитал код с урока</string>
+    <string name="watch_stream">2.Просмотрел стрим</string>
+    <string name="write_screen_se_q">3.Написал верстку для Settings и для Quiz</string>
+    <string name="create_h_st_dao">4.в HistoryStorage создал методы для HistoryDao</string>
+    <string name="in_dao_delete">5.в HistoryDao написал метод deleteAll под анотацией @Delete</string>
+    <string name="reread_code_q">1.Перечитаю код QuizApp для большего понимания \"</string>
+    <string name="impl_f_fi">2.Перейду к реализации пунктов 4 и 5</string>
+    <string name="hard_fa_da">Были сложности с заполнением History фейковыми данными</string>
+    <string name="im_sh_pr">-Реализовал отображение прогресса</string>
+    <string name="im_sh_ca">-Реализовал отображение категории</string>
+    <string name="im_ba_f_a">-Реализовал отработку кнопки back если первая страница закрывает Activity</string>
+    <string name="im_b_an">-Реализовал отработку кнопок на ответ</string>
+    <string name="one_sec_pag">-Поставил таймер на onAnswerClick чтоб при нажатии на ответ ждал 1 секунду прежде чем перелистнуть на следующий вопрос</string>
+    <string name="st_sc_qr">1.Начну верстку QuizResult </string>
+    <string name="im_wi_fi">2.Реализую фунции определения наличия интернета или WI-FI</string>
+    <string name="re_q_l_ans">С перемешиванием вопросов и вложением в лист answer</string>
+    <string name="since">C </string>
+    <string name="before"> До </string>
+    <string name="gone_to_dream">Ушло на сон </string>
+    <string name="wh_dr_q">Что приснилось ? (Необязательно)</string>
+    <string name="list_ideas"> Ваш список идей </string>
+    <string name="vis_im_idea">Визуальный образ хороший путь чтоб закрепить пришедшую идею</string>
+    <string name="by_cl_im_sh">При клике на карточку картинка открывается в полный размер </string>
+    <string name="cl_ca_re_id">Нажав на эту кнопку вы можете записать идею</string>
+    <string name="dream_record">Вести учёт сна</string>
+    <string name="history_empty">История пуста</string>
+    <string name="read">Читать</string>
+    <string name="date">Дата</string>
+    <string name="settings">Настройки</string>
+    <string name="new_event">Новое событие</string>
+    <string name="diplom_work">Дипломная работа</string>
+    <string name="phisology">Психология</string>
 </resources>
